@@ -3,6 +3,7 @@ package org.cloudfoundry.identity.uaa.alias;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.UAA;
 import static org.springframework.util.StringUtils.hasText;
 
+import java.util.Objects;
 import java.util.Optional;
 
 import org.cloudfoundry.identity.uaa.EntityWithAlias;
@@ -32,6 +33,10 @@ public abstract class EntityAliasHandler<T extends EntityWithAlias> {
             @NonNull final T requestBody,
             @Nullable final T existingEntity
     ) {
+        if (!hasText(requestBody.getZoneId())) {
+            throw new IllegalArgumentException("The zone ID of the request body must not be empty.");
+        }
+
         // if the entity already has an alias, the alias properties must not be changed
         final boolean entityAlreadyHasAlias = existingEntity != null && hasText(existingEntity.getAliasZid());
         if (entityAlreadyHasAlias) {
@@ -42,8 +47,7 @@ public abstract class EntityAliasHandler<T extends EntityWithAlias> {
 
             if (!hasText(existingEntity.getAliasId())) {
                 // at this point, we expect both properties to be set -> if not, the entity is in an inconsistent state
-                throw new IllegalStateException(String.format(
-                        "Both alias ID and alias ZID expected to be set for existing entity %s.",
+                throw new IllegalStateException("Both alias ID and alias ZID expected to be set for existing entity %s.".formatted(
                         existingEntity.getAliasDescription()
                 ));
             }
@@ -154,6 +158,7 @@ public abstract class EntityAliasHandler<T extends EntityWithAlias> {
         // update the existing alias entity
         if (existingAliasEntity != null) {
             setId(aliasEntity, existingAliasEntity.getId());
+            setPropertiesFromExistingAliasEntity(aliasEntity, existingAliasEntity);
             updateEntity(aliasEntity, originalEntity.getAliasZid());
             return originalEntity;
         }
@@ -162,8 +167,7 @@ public abstract class EntityAliasHandler<T extends EntityWithAlias> {
         try {
             identityZoneProvisioning.retrieve(originalEntity.getAliasZid());
         } catch (final ZoneDoesNotExistsException e) {
-            final String errorMessage = String.format(
-                    "Could not create alias for %s, as alias zone does not exist.",
+            final String errorMessage = "Could not create alias for %s, as alias zone does not exist.".formatted(
                     originalEntity.getAliasDescription()
             );
             throw new EntityAliasFailedException(errorMessage, HttpStatus.UNPROCESSABLE_ENTITY.value(), e);
@@ -176,6 +180,12 @@ public abstract class EntityAliasHandler<T extends EntityWithAlias> {
         originalEntity.setAliasId(persistedAliasEntity.getId());
         return updateEntity(originalEntity, originalEntity.getZoneId());
     }
+
+    /**
+     * Set properties from the existing alias entity in the new alias entity before it is updated. Can be used if
+     * certain properties should differ between the original and the alias entity.
+     */
+    protected abstract void setPropertiesFromExistingAliasEntity(final T newAliasEntity, final T existingAliasEntity);
 
     private T buildAliasEntity(final T originalEntity) {
         final T aliasEntity = cloneEntity(originalEntity);
@@ -208,4 +218,23 @@ public abstract class EntityAliasHandler<T extends EntityWithAlias> {
     protected abstract T updateEntity(final T entity, final String zoneId);
 
     protected abstract T createEntity(final T entity, final String zoneId) throws EntityAliasFailedException;
+
+    protected static <T extends EntityWithAlias> boolean isValidAliasPair(
+            @NonNull final T entity1,
+            @NonNull final T entity2
+    ) {
+        // check if both entities have an alias
+        final boolean entity1HasAlias = hasText(entity1.getAliasId()) && hasText(entity1.getAliasZid());
+        final boolean entity2HasAlias = hasText(entity2.getAliasId()) && hasText(entity2.getAliasZid());
+        if (!entity1HasAlias || !entity2HasAlias) {
+            return false;
+        }
+
+        // check if they reference each other
+        final boolean entity1ReferencesEntity2 = Objects.equals(entity1.getAliasId(), entity2.getId()) &&
+                Objects.equals(entity1.getAliasZid(), entity2.getZoneId());
+        final boolean entity2ReferencesEntity1 = Objects.equals(entity2.getAliasId(), entity1.getId()) &&
+                Objects.equals(entity2.getAliasZid(), entity1.getZoneId());
+        return entity1ReferencesEntity2 && entity2ReferencesEntity1;
+    }
 }
