@@ -13,7 +13,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.dao.DuplicateKeyException;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.dao.IncorrectResultSizeDataAccessException;
-import org.springframework.jca.cci.InvalidResultSetAccessException;
+import org.springframework.jdbc.InvalidResultSetAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.util.StringUtils;
@@ -26,7 +26,7 @@ import java.util.List;
 public class JdbcScimGroupExternalMembershipManager
         implements ScimGroupExternalMembershipManager {
 
-    private JdbcTemplate jdbcTemplate;
+    private final JdbcTemplate jdbcTemplate;
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
@@ -41,7 +41,7 @@ public class JdbcScimGroupExternalMembershipManager
     private static final String JOIN_WHERE_ID = "g.id = gm.group_id and gm.origin = ?";
 
     private static final String ADD_EXTERNAL_GROUP_MAPPING_SQL =
-            String.format("insert into %s ( %s ) values (?,lower(?),?,?,?)",
+            "insert into %s ( %s ) values (?,lower(?),?,?,?)".formatted(
                     EXTERNAL_GROUP_MAPPING_TABLE,
                     EXTERNAL_GROUP_MAPPING_FIELDS
             );
@@ -53,16 +53,16 @@ public class JdbcScimGroupExternalMembershipManager
     private final String getGroupsWithExternalGroupMappingsSql;
 
     private static final String DELETE_EXTERNAL_GROUP_MAPPING_SQL =
-            String.format("delete from %s where group_id=? and lower(external_group)=lower(?) and origin=? and identity_zone_id = ?",
+            "delete from %s where group_id=? and lower(external_group)=lower(?) and origin=? and identity_zone_id = ?".formatted(
                     EXTERNAL_GROUP_MAPPING_TABLE
             );
 
     private static final String DELETE_ALL_MAPPINGS_FOR_GROUP_SQL =
-            String.format("delete from %s where group_id = ? and identity_zone_id = ?",
+            "delete from %s where group_id = ? and identity_zone_id = ?".formatted(
                     EXTERNAL_GROUP_MAPPING_TABLE
             );
 
-    private RowMapper<ScimGroupExternalMember> rowMapper;
+    private final RowMapper<ScimGroupExternalMember> rowMapper;
 
     private ScimGroupProvisioning scimGroupProvisioning;
 
@@ -71,23 +71,23 @@ public class JdbcScimGroupExternalMembershipManager
 
         this.rowMapper = new ScimGroupExternalMemberRowMapper();
 
-        joinGroupTable = String.format("%s g, %s gm",
+        joinGroupTable = "%s g, %s gm".formatted(
                 dbUtils.getQuotedIdentifier(GROUP_TABLE, jdbcTemplate), EXTERNAL_GROUP_MAPPING_TABLE);
-        getGroupsWithExternalGroupMappingsSql = String.format("select %s from %s where gm.identity_zone_id = ? and g.id=? and %s and lower(external_group) like lower(?)",
+        getGroupsWithExternalGroupMappingsSql = "select %s from %s where gm.identity_zone_id = ? and g.id=? and %s and lower(external_group) like lower(?)".formatted(
                 JOIN_EXTERNAL_GROUP_MAPPING_FIELDS,
                 joinGroupTable,
                 JOIN_WHERE_ID
         );
-        getGroupsByExternalGroupMappingSql = String.format("select %s from %s where gm.identity_zone_id = ? and %s and lower(external_group)=lower(?)",
+        getGroupsByExternalGroupMappingSql = "select %s from %s where gm.identity_zone_id = ? and %s and lower(external_group)=lower(?)".formatted(
                 JOIN_EXTERNAL_GROUP_MAPPING_FIELDS,
                 joinGroupTable,
                 JOIN_WHERE_ID
         );
-        getExternalGroupMappingsInZoneSql = String.format("select %s from %s where gm.identity_zone_id=? and g.id = gm.group_id ",
+        getExternalGroupMappingsInZoneSql = "select %s from %s where gm.identity_zone_id=? and g.id = gm.group_id ".formatted(
                 JOIN_EXTERNAL_GROUP_MAPPING_FIELDS,
                 joinGroupTable
         );
-        getExternalGroupMappingsSql = String.format("select %s from %s where gm.identity_zone_id = ? and gm.group_id=? and %s",
+        getExternalGroupMappingsSql = "select %s from %s where gm.identity_zone_id = ? and gm.group_id=? and %s".formatted(
                 JOIN_EXTERNAL_GROUP_MAPPING_FIELDS,
                 joinGroupTable,
                 JOIN_WHERE_ID
@@ -100,9 +100,9 @@ public class JdbcScimGroupExternalMembershipManager
 
     @Override
     public ScimGroupExternalMember mapExternalGroup(final String groupId,
-                                                    final String externalGroup,
-                                                    final String origin,
-                                                    final String zoneId)
+            final String externalGroup,
+            final String origin,
+            final String zoneId)
             throws ScimResourceNotFoundException, MemberAlreadyExistsException {
 
         ScimGroup group = scimGroupProvisioning.retrieve(groupId, zoneId);
@@ -125,8 +125,7 @@ public class JdbcScimGroupExternalMembershipManager
             } catch (DuplicateKeyException e) {
                 // we should not throw, if the mapping exist, we should leave it
                 // there.
-                logger.info("The mapping between group " + group.getDisplayName() + " and external group "
-                        + externalGroup + " already exists");
+                logger.info("The mapping between group {} and external group {} already exists", group.getDisplayName(), externalGroup);
                 // throw new
                 // MemberAlreadyExistsException("The mapping between group " +
                 // group.getDisplayName() + " and external group " +
@@ -140,9 +139,9 @@ public class JdbcScimGroupExternalMembershipManager
 
     @Override
     public ScimGroupExternalMember unmapExternalGroup(final String groupId,
-                                                      final String externalGroup,
-                                                      final String origin,
-                                                      final String zoneId)
+            final String externalGroup,
+            final String origin,
+            final String zoneId)
             throws ScimResourceNotFoundException {
 
         ScimGroup group = scimGroupProvisioning.retrieve(groupId, zoneId);
@@ -159,7 +158,7 @@ public class JdbcScimGroupExternalMembershipManager
             } else if (count == 0) {
                 throw new ScimResourceNotFoundException("No group mappings deleted.");
             } else {
-                throw new InvalidResultSetAccessException("More than one mapping deleted count=" + count, new SQLException());
+                throw new InvalidResultSetAccessException("More than one mapping deleted count=" + count, DELETE_EXTERNAL_GROUP_MAPPING_SQL, new SQLException());
             }
         } else {
             return null;
@@ -173,8 +172,8 @@ public class JdbcScimGroupExternalMembershipManager
 
     @Override
     public List<ScimGroupExternalMember> getExternalGroupMapsByGroupId(final String groupId,
-                                                                       final String origin,
-                                                                       final String zoneId)
+            final String origin,
+            final String zoneId)
             throws ScimResourceNotFoundException {
         scimGroupProvisioning.retrieve(groupId, zoneId);
         return jdbcTemplate.query(getExternalGroupMappingsSql, ps -> {
@@ -219,8 +218,8 @@ public class JdbcScimGroupExternalMembershipManager
 
     @Override
     public List<ScimGroupExternalMember> getExternalGroupMapsByExternalGroup(final String externalGroup,
-                                                                             final String origin,
-                                                                             final String zoneId)
+            final String origin,
+            final String zoneId)
             throws ScimResourceNotFoundException {
 
         return jdbcTemplate.query(getGroupsByExternalGroupMappingSql, ps -> {
@@ -232,9 +231,9 @@ public class JdbcScimGroupExternalMembershipManager
     }
 
     private ScimGroupExternalMember getExternalGroupMap(final String groupId,
-                                                        final String externalGroup,
-                                                        final String origin,
-                                                        final String zoneId)
+            final String externalGroup,
+            final String origin,
+            final String zoneId)
             throws ScimResourceNotFoundException {
         try {
             return jdbcTemplate.queryForObject(getGroupsWithExternalGroupMappingsSql,
