@@ -18,66 +18,61 @@ package org.cloudfoundry.identity.uaa.oauth.jwt;
 import org.cloudfoundry.identity.uaa.oauth.InvalidSignatureException;
 import org.cloudfoundry.identity.uaa.oauth.KeyInfo;
 import org.cloudfoundry.identity.uaa.oauth.KeyInfoBuilder;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
 import org.cloudfoundry.identity.uaa.oauth.jwk.JsonWebKey;
 import org.cloudfoundry.identity.uaa.oauth.jwk.JsonWebKeySet;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-import org.springframework.security.oauth2.common.util.RandomValueStringGenerator;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static java.util.Collections.singletonMap;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.oauth.jwk.JsonWebKey.KeyType.MAC;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
 
-public class ChainedSignatureVerifierTests {
-    private Signer signer;
-    private Signer invalidSigner;
-
-    private String rsaSigningKey;
-    private String invalidRsaSigningKey;
-
-    private String content;
+class ChainedSignatureVerifierTests {
     private Jwt signedValidContent;
 
     private JsonWebKey validKey;
     private JsonWebKey invalidKey;
     private ChainedSignatureVerifier verifier;
-    private KeyInfo keyInfo;
 
+    @BeforeEach
+    void setup() {
+        String rsaSigningKey = """
+                -----BEGIN RSA PRIVATE KEY-----
+                MIIBOQIBAAJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdpY8Ada9pZfxXz1PZSqv9T
+                PTMAzNx+EkzMk2IMYN+uNm1bfDzaxVdz+QIDAQABAkBoR39y4rw0/QsY3PKQD5xo
+                hYSZCMCmJUI/sFCuECevIFY4h6q9KBP+4Set96f7Bgs9wJWVvCMx/nJ6guHAjsIB
+                AiEAywVOoCGIZ2YzARXWYcMRYZ89hxoHh8kZ+QMthRSZieECIQCP/GWQYgyofAQA
+                BtM8YwThXEV+S3KtuCn4IAQ89gqdGQIgULBASpZpPyc4OEM0nFBKFTGT46EtwwLj
+                RrvDmLPSPiECICQi9FqIQSUH+vkGvX0qXM8ymT5ZMS7oSaA8aNPj7EYBAiEAx5V3
+                2JGEulMY3bK1PVGYmtsXF1gq6zbRMoollMCRSMg=
+                -----END RSA PRIVATE KEY-----""";
 
-    @Before
-    public void setup() {
-        rsaSigningKey = "-----BEGIN RSA PRIVATE KEY-----\n" +
-          "MIIBOQIBAAJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdpY8Ada9pZfxXz1PZSqv9T\n" +
-          "PTMAzNx+EkzMk2IMYN+uNm1bfDzaxVdz+QIDAQABAkBoR39y4rw0/QsY3PKQD5xo\n" +
-          "hYSZCMCmJUI/sFCuECevIFY4h6q9KBP+4Set96f7Bgs9wJWVvCMx/nJ6guHAjsIB\n" +
-          "AiEAywVOoCGIZ2YzARXWYcMRYZ89hxoHh8kZ+QMthRSZieECIQCP/GWQYgyofAQA\n" +
-          "BtM8YwThXEV+S3KtuCn4IAQ89gqdGQIgULBASpZpPyc4OEM0nFBKFTGT46EtwwLj\n" +
-          "RrvDmLPSPiECICQi9FqIQSUH+vkGvX0qXM8ymT5ZMS7oSaA8aNPj7EYBAiEAx5V3\n" +
-          "2JGEulMY3bK1PVGYmtsXF1gq6zbRMoollMCRSMg=\n" +
-          "-----END RSA PRIVATE KEY-----";
+        String invalidRsaSigningKey = """
+                -----BEGIN RSA PRIVATE KEY-----
+                MIIBOgIBAAJBAJnlBG4lLmUiHslsKDODfd0MqmGZRNUOhn7eO3cKobsFljUKzRQe
+                GB7LYMjPavnKccm6+jWSXutpzfAc9A9wXG8CAwEAAQJADwwdiseH6cuURw2UQLUy
+                sVJztmdOG6b375+7IMChX6/cgoF0roCPP0Xr70y1J4TXvFhjcwTgm4RI+AUiIDKw
+                gQIhAPQHwHzdYG1639Qz/TCHzuai0ItwVC1wlqKpat+CaqdZAiEAoXFyS7249mRu
+                xtwRAvxKMe+eshHvG2le+ZDrM/pz8QcCIQCzmCDpxGL7L7sbCUgFN23l/11Lwdex
+                uXKjM9wbsnebwQIgeZIbVovUp74zaQ44xT3EhVwC7ebxXnv3qAkIBMk526sCIDVg
+                z1jr3KEcaq9zjNJd9sKBkqpkVSqj8Mv+Amq+YjBA
+                -----END RSA PRIVATE KEY-----""";
 
-        invalidRsaSigningKey = "-----BEGIN RSA PRIVATE KEY-----\n" +
-          "MIIBOgIBAAJBAJnlBG4lLmUiHslsKDODfd0MqmGZRNUOhn7eO3cKobsFljUKzRQe\n" +
-          "GB7LYMjPavnKccm6+jWSXutpzfAc9A9wXG8CAwEAAQJADwwdiseH6cuURw2UQLUy\n" +
-          "sVJztmdOG6b375+7IMChX6/cgoF0roCPP0Xr70y1J4TXvFhjcwTgm4RI+AUiIDKw\n" +
-          "gQIhAPQHwHzdYG1639Qz/TCHzuai0ItwVC1wlqKpat+CaqdZAiEAoXFyS7249mRu\n" +
-          "xtwRAvxKMe+eshHvG2le+ZDrM/pz8QcCIQCzmCDpxGL7L7sbCUgFN23l/11Lwdex\n" +
-          "uXKjM9wbsnebwQIgeZIbVovUp74zaQ44xT3EhVwC7ebxXnv3qAkIBMk526sCIDVg\n" +
-          "z1jr3KEcaq9zjNJd9sKBkqpkVSqj8Mv+Amq+YjBA\n" +
-          "-----END RSA PRIVATE KEY-----";
-
-        invalidSigner = new CommonSigner("invalid", invalidRsaSigningKey, "http://localhost/uaa");
-
-        content = "{\"sub\": \"" + new RandomValueStringGenerator(1024 * 4).generate() + "\"}";
-        keyInfo = KeyInfoBuilder.build("valid", rsaSigningKey, "http://localhost/uaa");
+        String content = "{\"sub\": \"" + new RandomValueStringGenerator(1024 * 4).generate() + "\"}";
+        KeyInfo keyInfo = KeyInfoBuilder.build("valid", rsaSigningKey, "http://localhost/uaa");
 
         signedValidContent = JwtHelper.encode(JsonUtils.readValue(content, HashMap.class), keyInfo);
 
@@ -86,54 +81,55 @@ public class ChainedSignatureVerifierTests {
     }
 
     @Test
-    public void test_single_key_valid() {
+    void single_key_valid() {
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Collections.singletonList(validKey)));
         JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
     }
 
-    @Test(expected = InvalidSignatureException.class)
-    public void test_single_key_invalid() {
+    @Test
+    void single_key_invalid() {
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Collections.singletonList(invalidKey)));
-        JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
+        assertThatExceptionOfType(InvalidSignatureException.class).isThrownBy(() ->
+                JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier));
     }
 
     @Test
-    public void test_multi_key_first_valid() {
+    void multi_key_first_valid() {
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Arrays.asList(validKey, invalidKey)));
         JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
     }
 
     @Test
-    public void test_multi_key_last_valid() {
+    void multi_key_last_valid() {
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Arrays.asList(invalidKey, validKey)));
         JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
     }
 
-    @Test(expected = InvalidSignatureException.class)
-    public void test_multi_key_invalid() {
+    @Test
+    void multi_key_invalid() {
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Arrays.asList(invalidKey, invalidKey)));
-        JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
+        assertThatExceptionOfType(InvalidSignatureException.class).isThrownBy(() ->
+                JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier));
     }
 
     @Test
-    public void check_that_we_use_common_signer() {
+    void check_that_we_use_common_signer() {
         Map<String, Object> p = new HashMap<>();
         p.put("kty", MAC.name());
         p.put("kid", "macid");
         p.put("value", "test-mac-key");
         JsonWebKey macKey = new JsonWebKey(p);
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Arrays.asList(validKey, invalidKey, macKey)));
-        List<SignatureVerifier> delegates = new ArrayList((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
-        assertNotNull(delegates);
-        assertEquals(3, delegates.size());
+        List<SignatureVerifier> delegates = new ArrayList<>((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
+        assertThat(delegates).hasSize(3);
         int pos = 0;
         for (SignatureVerifier v : delegates) {
-            assertTrue("Checking " + (pos++), v instanceof SignatureVerifier);
+            assertThat(v).as("Checking " + (pos++)).isInstanceOf(SignatureVerifier.class);
         }
     }
 
     @Test
-    public void unsupported_key_types_are_ignored() {
+    void unsupported_key_types_are_ignored() {
         Map<String, Object> p = new HashMap<>();
         p.put("kty", "ES");
         p.put("kid", "ecid");
@@ -146,17 +142,16 @@ public class ChainedSignatureVerifierTests {
         q.put("k", "octkeyvalue");
         JsonWebKeySet keySet = JsonUtils.convertValue(singletonMap("keys", Arrays.asList(validKey, p, q)), JsonWebKeySet.class);
         verifier = new ChainedSignatureVerifier(keySet);
-        List<SignatureVerifier> delegates = new ArrayList((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
-        assertNotNull(delegates);
-        assertEquals(1, delegates.size());
+        List<SignatureVerifier> delegates = new ArrayList<>((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
+        assertThat(delegates).hasSize(1);
         int pos = 0;
         for (SignatureVerifier v : delegates) {
-            assertTrue("Checking " + (pos++), v instanceof SignatureVerifier);
+            assertThat(v).as("Checking " + (pos++)).isInstanceOf(SignatureVerifier.class);
         }
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void no_supported_key_types_causes_error() {
+    @Test
+    void no_supported_key_types_causes_error() {
         Map<String, Object> p = new HashMap<>();
         p.put("kty", "EC");
         p.put("kid", "ecid");
@@ -168,25 +163,26 @@ public class ChainedSignatureVerifierTests {
         q.put("kty", "oct");
         q.put("k", "octkeyvalue");
         JsonWebKeySet keySet = JsonUtils.convertValue(singletonMap("keys", Arrays.asList(p, q)), JsonWebKeySet.class);
-        verifier = new ChainedSignatureVerifier(keySet);
+        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> {
+            verifier = new ChainedSignatureVerifier(keySet);
+        });
     }
 
     @Test
-    public void test_single_hmackey_valid() {
+    void single_hmackey_valid() {
         Map<String, Object> q = new HashMap<>();
         q.put("kid", "test");
         q.put("kty", "oct");
         q.put("k", "octkeyvalue");
         JsonWebKeySet keySet = JsonUtils.convertValue(singletonMap("keys", Arrays.asList(q)), JsonWebKeySet.class);
         verifier = new ChainedSignatureVerifier(keySet);
-        List<SignatureVerifier> delegates = new ArrayList((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
-        assertNotNull(delegates);
-        assertEquals(1, delegates.size());
-        assertEquals("HS256", delegates.get(0).algorithm());
+        List<SignatureVerifier> delegates = new ArrayList<>((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
+        assertThat(delegates).hasSize(1);
+        assertThat(delegates.getFirst().algorithm()).isEqualTo("HS256");
     }
 
     @Test
-    public void test_single_eckey_valid() {
+    void single_eckey_valid() {
         Map<String, Object> q = new HashMap<>();
         q.put("kid", "ec-key");
         q.put("kty", "EC");
@@ -195,15 +191,14 @@ public class ChainedSignatureVerifierTests {
         q.put("y", "SLW_xSffzlPWrHEVI30DHM_4egVwt3NQqeUD7nMFpps");
         JsonWebKeySet keySet = JsonUtils.convertValue(singletonMap("keys", Arrays.asList(q)), JsonWebKeySet.class);
         verifier = new ChainedSignatureVerifier(keySet);
-        List<SignatureVerifier> delegates = new ArrayList((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
-        assertNotNull(delegates);
-        assertEquals(1, delegates.size());
-        assertNotNull(delegates.get(0));
-        assertEquals("ES256", delegates.get(0).algorithm());
+        List<SignatureVerifier> delegates = new ArrayList<>((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
+        assertThat(delegates).hasSize(1);
+        assertThat(delegates.getFirst()).isNotNull();
+        assertThat(delegates.getFirst().algorithm()).isEqualTo("ES256");
     }
 
     @Test
-    public void test_multi_key_both_valid() {
+    void multi_key_both_valid() {
         Map<String, Object> p = new HashMap<>();
         p.put("kty", MAC.name());
         p.put("value", "mac-content");
@@ -211,10 +206,9 @@ public class ChainedSignatureVerifierTests {
 
         verifier = new ChainedSignatureVerifier(new JsonWebKeySet<>(Arrays.asList(validKey, jsonWebKey)));
         JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
-        List<SignatureVerifier> delegates = new ArrayList((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
-        assertNotNull(delegates);
-        assertEquals(2, delegates.size());
-        assertEquals("HS256", delegates.get(1).algorithm());
+        List<SignatureVerifier> delegates = new ArrayList<>((List<SignatureVerifier>) ReflectionTestUtils.getField(verifier, verifier.getClass(), "delegates"));
+        assertThat(delegates).hasSize(2);
+        assertThat(delegates.get(1).algorithm()).isEqualTo("HS256");
 
         //ensure the second signer never gets invoked upon success
         delegates.remove(1);
@@ -224,5 +218,4 @@ public class ChainedSignatureVerifierTests {
         JwtHelper.decode(signedValidContent.getEncoded()).verifySignature(verifier);
         Mockito.verifyNoInteractions(macSigner);
     }
-
 }
