@@ -1,12 +1,14 @@
 package org.cloudfoundry.identity.uaa.provider.oauth;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.google.common.testing.FakeTicker;
+import com.github.benmanes.caffeine.cache.Ticker;
 import com.nimbusds.jose.JWSSigner;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.cloudfoundry.identity.uaa.authentication.AccountNotPreCreatedException;
 import org.cloudfoundry.identity.uaa.authentication.UaaAuthentication;
+import org.cloudfoundry.identity.uaa.authentication.UaaPrincipal;
+import org.cloudfoundry.identity.uaa.authentication.event.IdentityProviderAuthenticationSuccessEvent;
 import org.cloudfoundry.identity.uaa.authentication.manager.ExternalGroupAuthorizationEvent;
 import org.cloudfoundry.identity.uaa.authentication.manager.InvitedUserAuthenticatedEvent;
 import org.cloudfoundry.identity.uaa.authentication.manager.NewUserAuthenticatedEvent;
@@ -19,6 +21,7 @@ import org.cloudfoundry.identity.uaa.oauth.KeyInfoBuilder;
 import org.cloudfoundry.identity.uaa.oauth.KeyInfoService;
 import org.cloudfoundry.identity.uaa.oauth.TokenEndpointBuilder;
 import org.cloudfoundry.identity.uaa.oauth.TokenKeyEndpoint;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
 import org.cloudfoundry.identity.uaa.oauth.jwk.JsonWebKey;
 import org.cloudfoundry.identity.uaa.oauth.jwk.JsonWebKeySet;
 import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
@@ -30,6 +33,7 @@ import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.RawExternalOAuthIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthAuthenticationManager.AuthenticationData;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupExternalMember;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupExternalMembershipManager;
 import org.cloudfoundry.identity.uaa.user.InMemoryUaaUserDatabase;
@@ -43,7 +47,10 @@ import org.cloudfoundry.identity.uaa.util.TimeServiceImpl;
 import org.cloudfoundry.identity.uaa.util.UaaRandomStringUtil;
 import org.cloudfoundry.identity.uaa.util.UaaTokenUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneProvisioning;
 import org.cloudfoundry.identity.uaa.zone.MultitenancyFixture;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManager;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManagerImpl;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -57,7 +64,6 @@ import org.springframework.security.authentication.InsufficientAuthenticationExc
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.oauth2.common.exceptions.InvalidTokenException;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
@@ -71,6 +77,7 @@ import org.springframework.web.context.request.ServletRequestAttributes;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
@@ -82,34 +89,21 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.CountDownLatch;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.fail;
+import static org.cloudfoundry.identity.uaa.constants.OriginKeys.OAUTH20;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.ISS;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.GROUP_ATTRIBUTE_NAME;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.USER_NAME_ATTRIBUTE_NAME;
-import static org.cloudfoundry.identity.uaa.util.AssertThrowsWithMessage.assertThrowsWithMessageThat;
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.entry;
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.map;
 import static org.cloudfoundry.identity.uaa.util.UaaStringUtils.DEFAULT_UAA_URL;
-import static org.hamcrest.CoreMatchers.not;
-import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.anyString;
 import static org.mockito.Mockito.atLeast;
@@ -117,6 +111,7 @@ import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.same;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
@@ -133,6 +128,39 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
 
 class ExternalOAuthAuthenticationManagerIT {
     private static final String UAA_ORIGIN = "uaa";
+    private static final String CODE = "the_code";
+    private static final String ORIGIN = "the_origin";
+    private static final String ISSUER = "cf-app.com";
+    private static final String UAA_ISSUER_URL = "http://issuer.url";
+    private static final List<String> SCOPES_LIST = Arrays.asList("openid", "some.other.scope", "closedid");
+
+    private static final String PUBLIC_KEY = """
+            -----BEGIN PUBLIC KEY-----
+            MFswDQYJKoZIhvcNAQEBBQADSgAwRwJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdp
+            Y8Ada9pZfxXz1PZSqv9TPTMAzNx+EkzMk2IMYN+uNm1bfDzaxVdz+QIDAQAB
+            -----END PUBLIC KEY-----""";
+
+    private static final String PRIVATE_KEY = """
+            -----BEGIN RSA PRIVATE KEY-----
+            MIIBOQIBAAJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdpY8Ada9pZfxXz1PZSqv9T
+            PTMAzNx+EkzMk2IMYN+uNm1bfDzaxVdz+QIDAQABAkBoR39y4rw0/QsY3PKQD5xo
+            hYSZCMCmJUI/sFCuECevIFY4h6q9KBP+4Set96f7Bgs9wJWVvCMx/nJ6guHAjsIB
+            AiEAywVOoCGIZ2YzARXWYcMRYZ89hxoHh8kZ+QMthRSZieECIQCP/GWQYgyofAQA
+            BtM8YwThXEV+S3KtuCn4IAQ89gqdGQIgULBASpZpPyc4OEM0nFBKFTGT46EtwwLj
+            RrvDmLPSPiECICQi9FqIQSUH+vkGvX0qXM8ymT5ZMS7oSaA8aNPj7EYBAiEAx5V3
+            2JGEulMY3bK1PVGYmtsXF1gq6zbRMoollMCRSMg=
+            -----END RSA PRIVATE KEY-----""";
+
+    private static final String INVALID_RSA_SIGNING_KEY = """
+            -----BEGIN RSA PRIVATE KEY-----
+            MIIBOgIBAAJBAJnlBG4lLmUiHslsKDODfd0MqmGZRNUOhn7eO3cKobsFljUKzRQe
+            GB7LYMjPavnKccm6+jWSXutpzfAc9A9wXG8CAwEAAQJADwwdiseH6cuURw2UQLUy
+            sVJztmdOG6b375+7IMChX6/cgoF0roCPP0Xr70y1J4TXvFhjcwTgm4RI+AUiIDKw
+            gQIhAPQHwHzdYG1639Qz/TCHzuai0ItwVC1wlqKpat+CaqdZAiEAoXFyS7249mRu
+            xtwRAvxKMe+eshHvG2le+ZDrM/pz8QcCIQCzmCDpxGL7L7sbCUgFN23l/11Lwdex
+            uXKjM9wbsnebwQIgeZIbVovUp74zaQ44xT3EhVwC7ebxXnv3qAkIBMk526sCIDVg
+            z1jr3KEcaq9zjNJd9sKBkqpkVSqj8Mv+Amq+YjBA
+            -----END RSA PRIVATE KEY-----""";
 
     private MockRestServiceServer mockUaaServer;
     private ExternalOAuthAuthenticationManager externalOAuthAuthenticationManager;
@@ -141,36 +169,14 @@ class ExternalOAuthAuthenticationManagerIT {
     private InMemoryUaaUserDatabase userDatabase;
     private ExternalOAuthCodeToken xCodeToken;
     private ApplicationEventPublisher publisher;
-    private static final String CODE = "the_code";
-
-    private static final String ORIGIN = "the_origin";
-    private static final String ISSUER = "cf-app.com";
-    private static final String UAA_ISSUER_URL = "http://issuer.url";
-    private static final List<String> SCOPES_LIST = Arrays.asList("openid", "some.other.scope", "closedid");
 
     private Map<String, Object> claims;
     private HashMap<String, Object> attributeMappings;
     private OIDCIdentityProviderDefinition config;
     private JWSSigner signer;
     private Map<String, Object> header;
-    private String invalidRsaSigningKey;
     private ExternalOAuthProviderConfigurator externalOAuthProviderConfigurator;
     private TokenEndpointBuilder tokenEndpointBuilder;
-
-    private static final String PUBLIC_KEY = "-----BEGIN PUBLIC KEY-----\n" +
-            "MFswDQYJKoZIhvcNAQEBBQADSgAwRwJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdp\n" +
-            "Y8Ada9pZfxXz1PZSqv9TPTMAzNx+EkzMk2IMYN+uNm1bfDzaxVdz+QIDAQAB\n" +
-            "-----END PUBLIC KEY-----";
-
-    private static final String PRIVATE_KEY = "-----BEGIN RSA PRIVATE KEY-----\n" +
-            "MIIBOQIBAAJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdpY8Ada9pZfxXz1PZSqv9T\n" +
-            "PTMAzNx+EkzMk2IMYN+uNm1bfDzaxVdz+QIDAQABAkBoR39y4rw0/QsY3PKQD5xo\n" +
-            "hYSZCMCmJUI/sFCuECevIFY4h6q9KBP+4Set96f7Bgs9wJWVvCMx/nJ6guHAjsIB\n" +
-            "AiEAywVOoCGIZ2YzARXWYcMRYZ89hxoHh8kZ+QMthRSZieECIQCP/GWQYgyofAQA\n" +
-            "BtM8YwThXEV+S3KtuCn4IAQ89gqdGQIgULBASpZpPyc4OEM0nFBKFTGT46EtwwLj\n" +
-            "RrvDmLPSPiECICQi9FqIQSUH+vkGvX0qXM8ymT5ZMS7oSaA8aNPj7EYBAiEAx5V3\n" +
-            "2JGEulMY3bK1PVGYmtsXF1gq6zbRMoollMCRSMg=\n" +
-            "-----END RSA PRIVATE KEY-----";
 
     @AfterEach
     void clearContext() {
@@ -195,6 +201,8 @@ class ExternalOAuthAuthenticationManagerIT {
         IdentityZoneHolder.get().getConfig().getTokenPolicy().setKeys(Collections.singletonMap(keyName, PRIVATE_KEY));
 
         provisioning = mock(IdentityProviderProvisioning.class);
+        IdentityZoneProvisioning identityZoneProvisioning = mock(IdentityZoneProvisioning.class);
+        IdentityZoneManager identityZoneManager = new IdentityZoneManagerImpl();
         ScimGroupExternalMembershipManager externalMembershipManager = mock(ScimGroupExternalMembershipManager.class);
 
         for (String scope : SCOPES_LIST) {
@@ -208,7 +216,7 @@ class ExternalOAuthAuthenticationManagerIT {
         publisher = mock(ApplicationEventPublisher.class);
         tokenEndpointBuilder = mock(TokenEndpointBuilder.class);
         when(tokenEndpointBuilder.getTokenEndpoint(IdentityZoneHolder.get())).thenReturn(UAA_ISSUER_URL);
-        urlContentCache = spy(new StaleUrlCache(Duration.ofMinutes(2), new TimeServiceImpl(), 10, new FakeTicker()));
+        urlContentCache = spy(new StaleUrlCache(Duration.ofMinutes(2), new TimeServiceImpl(), 10, Ticker.systemTicker()));
         OidcMetadataFetcher oidcMetadataFetcher = new OidcMetadataFetcher(
                 urlContentCache,
                 trustingRestTemplate,
@@ -218,13 +226,14 @@ class ExternalOAuthAuthenticationManagerIT {
                 new ExternalOAuthProviderConfigurator(
                         provisioning,
                         oidcMetadataFetcher,
-                        mock(UaaRandomStringUtil.class))
+                        mock(UaaRandomStringUtil.class),
+                        identityZoneProvisioning,
+                        identityZoneManager)
         );
-        externalOAuthAuthenticationManager = spy(new ExternalOAuthAuthenticationManager(externalOAuthProviderConfigurator, trustingRestTemplate, nonTrustingRestTemplate, tokenEndpointBuilder, new KeyInfoService(UAA_ISSUER_URL), oidcMetadataFetcher));
+        externalOAuthAuthenticationManager = spy(new ExternalOAuthAuthenticationManager(externalOAuthProviderConfigurator, identityZoneManager, trustingRestTemplate, nonTrustingRestTemplate, tokenEndpointBuilder, new KeyInfoService(UAA_ISSUER_URL), oidcMetadataFetcher));
         externalOAuthAuthenticationManager.setUserDatabase(userDatabase);
         externalOAuthAuthenticationManager.setExternalMembershipManager(externalMembershipManager);
         externalOAuthAuthenticationManager.setApplicationEventPublisher(publisher);
-        externalOAuthAuthenticationManager.setTokenEndpointBuilder(tokenEndpointBuilder);
         xCodeToken = new ExternalOAuthCodeToken(CODE, ORIGIN, "http://localhost/callback/the_origin");
         claims = map(
                 entry("sub", "12345"),
@@ -254,32 +263,18 @@ class ExternalOAuthAuthenticationManagerIT {
         attributeMappings = new HashMap<>();
 
         config = new OIDCIdentityProviderDefinition()
-                .setAuthUrl(new URL("http://localhost/oauth/authorize"))
-                .setTokenUrl(new URL("http://localhost/oauth/token"))
+                .setAuthUrl(URI.create("http://localhost/oauth/authorize").toURL())
+                .setTokenUrl(URI.create("http://localhost/oauth/token").toURL())
                 .setIssuer("http://localhost/oauth/token")
                 .setShowLinkText(true)
                 .setLinkText("My OIDC Provider")
                 .setRelyingPartyId("identity")
                 .setRelyingPartySecret("identitysecret")
-                .setUserInfoUrl(new URL("http://localhost/userinfo"))
+                .setUserInfoUrl(URI.create("http://localhost/userinfo").toURL())
                 .setTokenKey(PUBLIC_KEY);
-        config.setExternalGroupsWhitelist(
-                Collections.singletonList(
-                        "*"
-                )
-        );
+        config.setExternalGroupsWhitelist(Collections.singletonList("*"));
 
         mockUaaServer = MockRestServiceServer.createServer(nonTrustingRestTemplate);
-
-        invalidRsaSigningKey = "-----BEGIN RSA PRIVATE KEY-----\n" +
-                "MIIBOgIBAAJBAJnlBG4lLmUiHslsKDODfd0MqmGZRNUOhn7eO3cKobsFljUKzRQe\n" +
-                "GB7LYMjPavnKccm6+jWSXutpzfAc9A9wXG8CAwEAAQJADwwdiseH6cuURw2UQLUy\n" +
-                "sVJztmdOG6b375+7IMChX6/cgoF0roCPP0Xr70y1J4TXvFhjcwTgm4RI+AUiIDKw\n" +
-                "gQIhAPQHwHzdYG1639Qz/TCHzuai0ItwVC1wlqKpat+CaqdZAiEAoXFyS7249mRu\n" +
-                "xtwRAvxKMe+eshHvG2le+ZDrM/pz8QcCIQCzmCDpxGL7L7sbCUgFN23l/11Lwdex\n" +
-                "uXKjM9wbsnebwQIgeZIbVovUp74zaQ44xT3EhVwC7ebxXnv3qAkIBMk526sCIDVg\n" +
-                "z1jr3KEcaq9zjNJd9sKBkqpkVSqj8Mv+Amq+YjBA\n" +
-                "-----END RSA PRIVATE KEY-----";
     }
 
     @Test
@@ -291,23 +286,23 @@ class ExternalOAuthAuthenticationManagerIT {
         token.setResponseType("token");
         OIDCIdentityProviderDefinition oidcIdentityProviderDefinition = new OIDCIdentityProviderDefinition();
 
-        assertEquals("signed_request", externalOAuthAuthenticationManager.getResponseType(signed));
-        assertEquals("code", externalOAuthAuthenticationManager.getResponseType(code));
-        assertEquals("token", externalOAuthAuthenticationManager.getResponseType(token));
-        assertEquals("id_token", externalOAuthAuthenticationManager.getResponseType(oidcIdentityProviderDefinition));
+        assertThat(externalOAuthAuthenticationManager.getResponseType(signed)).isEqualTo("signed_request");
+        assertThat(externalOAuthAuthenticationManager.getResponseType(code)).isEqualTo("code");
+        assertThat(externalOAuthAuthenticationManager.getResponseType(token)).isEqualTo("token");
+        assertThat(externalOAuthAuthenticationManager.getResponseType(oidcIdentityProviderDefinition)).isEqualTo("id_token");
     }
 
     @Test
     void unknown_config_class() {
-        assertThrowsWithMessageThat(IllegalArgumentException.class, () -> {
-                    externalOAuthAuthenticationManager.getResponseType(new AbstractExternalOAuthIdentityProviderDefinition() {
-                        @Override
-                        public URL getAuthUrl() {
-                            return super.getAuthUrl();
-                        }
-                    });
-                },
-                is("Unknown type for provider."));
+        var idp = new AbstractExternalOAuthIdentityProviderDefinition<>() {
+            @Override
+            public URL getAuthUrl() {
+                return super.getAuthUrl();
+            }
+        };
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.getResponseType(idp))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Unknown type for provider.");
     }
 
     @Test
@@ -318,76 +313,14 @@ class ExternalOAuthAuthenticationManagerIT {
         Mac mac = Mac.getInstance("HmacSHA256");
         mac.init(secretKey);
         byte[] hmacData = mac.doFinal(data.getBytes(StandardCharsets.UTF_8));
-        assertThat(new String(Base64.encodeBase64URLSafe(hmacData)), equalTo(externalOAuthAuthenticationManager.hmacSignAndEncode(data, key)));
-    }
-
-    @Test
-    void authManager_origin_is_thread_safe() throws Exception {
-        CountDownLatch countDownLatchA = new CountDownLatch(1);
-        CountDownLatch countDownLatchB = new CountDownLatch(1);
-
-        final String[] thread1Origin = new String[1];
-        final String[] thread2Origin = new String[1];
-        Thread thread1 = new Thread() {
-            @Override
-            public void run() {
-                externalOAuthAuthenticationManager.setOrigin("a");
-                resumeThread2();
-                pauseThread1();
-                thread1Origin[0] = externalOAuthAuthenticationManager.getOrigin();
-            }
-
-            private void resumeThread2() {
-                countDownLatchB.countDown();
-            }
-
-            private void pauseThread1() {
-                try {
-                    countDownLatchA.await();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
-            }
-        };
-
-        Thread thread2 = new Thread() {
-            @Override
-            public void run() {
-                pauseThread2();
-                externalOAuthAuthenticationManager.setOrigin("b");
-                resumeThread1();
-
-                thread2Origin[0] = externalOAuthAuthenticationManager.getOrigin();
-            }
-
-            private void resumeThread1() {
-                countDownLatchA.countDown();
-            }
-
-            private void pauseThread2() {
-                try {
-                    countDownLatchB.await();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
-            }
-        };
-
-        thread2.start();
-        thread1.start();
-
-        thread1.join();
-        thread2.join();
-
-        assertThat(thread1Origin[0], is("a"));
-        assertThat(thread2Origin[0], is("b"));
+        assertThat(new String(Base64.encodeBase64URLSafe(hmacData))).isEqualTo(externalOAuthAuthenticationManager.hmacSignAndEncode(data, key));
     }
 
     @Test
     void when_a_null_id_token_is_provided_resolveOriginProvider_should_throw_a_jwt_validation_exception() {
-        assertThrowsWithMessageThat(InsufficientAuthenticationException.class,
-                () -> externalOAuthAuthenticationManager.resolveOriginProvider(null),
-                is("Unable to decode expected id_token"));
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.resolveOriginProvider(null))
+                .isInstanceOf(InsufficientAuthenticationException.class)
+                .hasMessage("Unable to decode expected id_token");
     }
 
     @Test
@@ -396,11 +329,9 @@ class ExternalOAuthAuthenticationManagerIT {
         xCodeToken = new ExternalOAuthCodeToken(null, null, null, token.getIdTokenValue(), null, null);
         String zoneId = IdentityZoneHolder.get().getId();
         when(provisioning.retrieveAll(eq(true), eq(zoneId))).thenReturn(emptyList());
-
-        assertThrowsWithMessageThat(InsufficientAuthenticationException.class,
-                () -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken),
-                is(String.format("Unable to map issuer, %s , to a single registered provider", claims.get(ISS)))
-        );
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken))
+                .isInstanceOf(InsufficientAuthenticationException.class)
+                .hasMessage("Unable to map issuer, %s , to a single registered provider".formatted(claims.get(ISS)));
     }
 
     @Test
@@ -408,11 +339,9 @@ class ExternalOAuthAuthenticationManagerIT {
         getProvider();
         CompositeToken token = getCompositeAccessToken(Collections.singletonList(ISS));
         xCodeToken = new ExternalOAuthCodeToken(null, null, null, token.getIdTokenValue(), null, null);
-
-        assertThrowsWithMessageThat(InsufficientAuthenticationException.class,
-                () -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken),
-                is("Issuer is missing in id_token")
-        );
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken))
+                .isInstanceOf(InsufficientAuthenticationException.class)
+                .hasMessage("Issuer is missing in id_token");
     }
 
     @Test
@@ -427,18 +356,17 @@ class ExternalOAuthAuthenticationManagerIT {
         verify(externalOAuthAuthenticationManager, times(1)).resolveOriginProvider(idTokenCaptor.capture());
         verify(provisioning, never()).retrieveByOrigin(anyString(), anyString());
         verify(externalOAuthProviderConfigurator, times(1)).retrieveByIssuer(eq("http://localhost/oauth/token"), anyString());
-        assertEquals(token.getIdTokenValue(), idTokenCaptor.getValue());
+        assertThat(idTokenCaptor.getValue()).isEqualTo(token.getIdTokenValue());
     }
 
     @Test
     void when_unable_to_find_an_idp_that_matches_the_id_token_issuer() {
-
         String issuerURL = "http://issuer.url";
         when(tokenEndpointBuilder.getTokenEndpoint(IdentityZoneHolder.get())).thenReturn("http://another-issuer.url");
         claims.put("iss", issuerURL);
         CompositeToken token = getCompositeAccessToken();
 
-        assertThrows(InsufficientAuthenticationException.class, () -> externalOAuthAuthenticationManager.resolveOriginProvider(token.getIdTokenValue()));
+        assertThatExceptionOfType(InsufficientAuthenticationException.class).isThrownBy(() -> externalOAuthAuthenticationManager.resolveOriginProvider(token.getIdTokenValue()));
     }
 
     @Test
@@ -459,12 +387,12 @@ class ExternalOAuthAuthenticationManagerIT {
         xCodeToken.setIdToken(idToken);
         xCodeToken.setOrigin(null);
 
-        ExternalOAuthAuthenticationManager.AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
+        AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
                 .getExternalAuthenticationDetails(xCodeToken);
 
-        assertThat(username, is(externalAuthenticationDetails.getUsername()));
-        assertThat(externalAuthenticationDetails.getClaims().get(ClaimConstants.ORIGIN), is(UAA_ORIGIN));
-        assertThat(externalOAuthAuthenticationManager.getOrigin(), is(UAA_ORIGIN));
+        assertThat(username).isEqualTo(externalAuthenticationDetails.getUsername());
+        assertThat(externalAuthenticationDetails.getClaims()).containsEntry(ClaimConstants.ORIGIN, UAA_ORIGIN);
+        assertThat(externalAuthenticationDetails.getOrigin()).isEqualTo(UAA_ORIGIN);
     }
 
     @ParameterizedTest
@@ -484,12 +412,12 @@ class ExternalOAuthAuthenticationManagerIT {
         xCodeToken.setIdToken(idToken);
         xCodeToken.setOrigin(null);
 
-        assertThrows(InsufficientAuthenticationException.class, () -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
+        assertThatExceptionOfType(InsufficientAuthenticationException.class).isThrownBy(() -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
     }
 
     @Test
     void when_exchanging_an_id_token_retrieved_by_uaa_via_an_oidc_idp_for_an_access_token_origin_should_be_kept() {
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> idpProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> idpProvider = getProvider();
         when(provisioning.retrieveAll(eq(true), anyString())).thenReturn(Collections.singletonList(idpProvider));
 
         String username = RandomStringUtils.random(50);
@@ -504,18 +432,17 @@ class ExternalOAuthAuthenticationManagerIT {
         xCodeToken.setIdToken(idToken);
         xCodeToken.setOrigin(null);
 
-
-        ExternalOAuthAuthenticationManager.AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
+        AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
                 .getExternalAuthenticationDetails(xCodeToken);
 
-        assertThat(username, is(externalAuthenticationDetails.getUsername()));
-        assertThat(externalAuthenticationDetails.getClaims().get(ClaimConstants.ORIGIN), is(idpProvider.getOriginKey()));
-        assertThat(externalOAuthAuthenticationManager.getOrigin(), is(idpProvider.getOriginKey()));
+        assertThat(username).isEqualTo(externalAuthenticationDetails.getUsername());
+        assertThat(externalAuthenticationDetails.getClaims()).containsEntry(ClaimConstants.ORIGIN, idpProvider.getOriginKey());
+        assertThat(externalAuthenticationDetails.getOrigin()).isEqualTo(idpProvider.getOriginKey());
     }
 
     @Test
     void when_exchanging_an_id_token_retrieved_by_uaa_via_an_registered_oidc_idp_for_an_access_token_origin_should_be_taken_from_token() {
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> idpProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> idpProvider = getProvider();
         idpProvider.setType(OriginKeys.OIDC10);
         idpProvider.getConfig().setIssuer(UAA_ISSUER_URL);
         when(provisioning.retrieveAll(eq(true), anyString())).thenReturn(Collections.singletonList(idpProvider));
@@ -530,18 +457,17 @@ class ExternalOAuthAuthenticationManagerIT {
         xCodeToken.setIdToken(idToken);
         xCodeToken.setOrigin(null);
 
-
-        ExternalOAuthAuthenticationManager.AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
+        AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
                 .getExternalAuthenticationDetails(xCodeToken);
 
-        assertThat(username, is(externalAuthenticationDetails.getUsername()));
-        assertThat(externalAuthenticationDetails.getClaims().get(ClaimConstants.ORIGIN), is(OriginKeys.UAA));
-        assertThat(externalOAuthAuthenticationManager.getOrigin(), is(idpProvider.getOriginKey()));
+        assertThat(username).isEqualTo(externalAuthenticationDetails.getUsername());
+        assertThat(externalAuthenticationDetails.getClaims()).containsEntry(ClaimConstants.ORIGIN, OriginKeys.UAA);
+        assertThat(externalAuthenticationDetails.getOrigin()).isEqualTo(idpProvider.getOriginKey());
     }
 
     @Test
     void when_exchanging_an_id_token_retrieved_by_an_external_oidc_idp_for_an_access_token_then_auth_data_should_contain_oidc_sub_claim() {
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> idpProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> idpProvider = getProvider();
         when(provisioning.retrieveAll(eq(true), anyString())).thenReturn(Collections.singletonList(idpProvider));
 
         String username = RandomStringUtils.random(50);
@@ -554,12 +480,11 @@ class ExternalOAuthAuthenticationManagerIT {
         xCodeToken.setIdToken(idToken);
         xCodeToken.setOrigin(null);
 
-
-        ExternalOAuthAuthenticationManager.AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
+        AuthenticationData externalAuthenticationDetails = externalOAuthAuthenticationManager
                 .getExternalAuthenticationDetails(xCodeToken);
 
-        assertThat(username, is(externalAuthenticationDetails.getUsername()));
-        assertThat(externalAuthenticationDetails.getClaims().get(ClaimConstants.ORIGIN), is(idpProvider.getOriginKey()));
+        assertThat(username).isEqualTo(externalAuthenticationDetails.getUsername());
+        assertThat(externalAuthenticationDetails.getClaims()).containsEntry(ClaimConstants.ORIGIN, idpProvider.getOriginKey());
     }
 
     @Test
@@ -569,7 +494,7 @@ class ExternalOAuthAuthenticationManagerIT {
 
         config.setAuthUrl(null);
         config.setTokenUrl(null);
-        config.setDiscoveryUrl(new URL("http://some.discovery.url"));
+        config.setDiscoveryUrl(URI.create("http://some.discovery.url").toURL());
 
         Map<String, Object> discoveryContent = new HashMap();
         discoveryContent.put("authorization_endpoint", authUrl.toString());
@@ -582,13 +507,62 @@ class ExternalOAuthAuthenticationManagerIT {
         mockUaaServer.expect(requestTo("http://some.discovery.url"))
                 .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(JsonUtils.writeValueAsBytes(discoveryContent)));
 
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
         mockToken();
         addTheUserOnAuth();
         externalOAuthAuthenticationManager.authenticate(xCodeToken);
-        verify(externalOAuthProviderConfigurator, atLeast(1)).overlay(eq(config));
+        verify(externalOAuthProviderConfigurator, atLeast(1)).overlay(config);
+        mockUaaServer.verify();
+
+    }
+
+    @Test
+    void oauth20_flow_works_with_non_jwt_token() throws Exception {
+        String userInfoResponse = """
+                {
+                  "login": "octocat",
+                  "id": 1,
+                  "type": "User",
+                  "site_admin": false,
+                  "name": "monalisa octocat",
+                  "company": "GitHub",
+                  "email": "octocat@github.example.com"
+                }""";
+
+        CompositeToken accessToken = getCompositeAccessToken();
+        accessToken.setIdTokenValue(null); //DOES NOT EXIST FOR OAUTH2.0
+        String oauth2TokenResponse = JsonUtils.writeValueAsString(accessToken);
+
+        //UAA exchanges the code for a token
+        mockUaaServer.expect(requestTo("http://localhost/oauth/token"))
+                .andExpect(header("Authorization", "Basic " + new String(Base64.encodeBase64("identity:identitysecret".getBytes()))))
+                .andExpect(header("Accept", "application/json"))
+                .andExpect(content().string(containsString("grant_type=authorization_code")))
+                .andExpect(content().string(containsString("code=the_code")))
+                .andExpect(content().string(containsString("redirect_uri=http%3A%2F%2Flocalhost%2Fcallback%2Fthe_origin")))
+                .andExpect(content().string(containsString("response_type=code")))
+                .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(oauth2TokenResponse));
+
+        //UAA retrieves user info using an access token
+        mockUaaServer.expect(requestTo(config.getUserInfoUrl().toString()))
+                .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(userInfoResponse));
+
+        IdentityProvider<RawExternalOAuthIdentityProviderDefinition> identityProvider = getOauth20Provider();
+        identityProvider.getConfig().setResponseType("code");
+        reset(provisioning);
+        when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
+
+        addTheUserOnAuth();
+
+        Authentication authentication = externalOAuthAuthenticationManager.authenticate(xCodeToken);
+        assertThat(authentication).isNotNull();
+        assertThat(authentication.getPrincipal()).isInstanceOf(UaaPrincipal.class);
+        UaaPrincipal principal = (UaaPrincipal) authentication.getPrincipal();
+        assertThat(principal).isNotNull();
+        assertThat(principal.getName()).isEqualTo("octocat");
+        assertThat(principal.getEmail()).isEqualTo("octocat@github.example.com");
         mockUaaServer.verify();
 
     }
@@ -597,14 +571,14 @@ class ExternalOAuthAuthenticationManagerIT {
     void clientAuthInBody_is_used() {
         config.setClientAuthInBody(true);
         mockUaaServer.expect(requestTo(config.getTokenUrl().toString()))
-                .andExpect(request -> assertThat("Check Auth header not present", request.getHeaders().get("Authorization"), nullValue()))
+                .andExpect(request -> assertThat(request.getHeaders().get("Authorization")).as("Check Auth header not present").isNull())
                 .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
                 .andExpect(content().string(containsString("client_secret=" + config.getRelyingPartySecret())))
                 .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
-        externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, config);
+        externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, identityProvider);
 
         mockUaaServer.verify();
     }
@@ -613,10 +587,10 @@ class ExternalOAuthAuthenticationManagerIT {
     void pkceClientAuthInBody_is_used() {
         config.setClientAuthInBody(true);
         mockUaaServer.expect(requestTo(config.getTokenUrl().toString()))
-            .andExpect(request -> assertThat("Check Auth header not present", request.getHeaders().get("Authorization"), nullValue()))
-            .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
-            .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+                .andExpect(request -> assertThat(request.getHeaders().get("Authorization")).as("Check Auth header not present").isNull())
+                .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
+                .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
         config.setRelyingPartySecret(null);
@@ -624,8 +598,8 @@ class ExternalOAuthAuthenticationManagerIT {
         attributes.setAttribute(SessionUtils.codeVerifierParameterAttributeKeyForIdp("uaa"), "code_verifier", RequestAttributes.SCOPE_SESSION);
         RequestContextHolder.setRequestAttributes(attributes);
 
-        Map<String, Object> idToken = externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, config);
-        assertNotNull(idToken);
+        Map<String, Object> idToken = externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, identityProvider);
+        assertThat(idToken).isNotNull();
 
         mockUaaServer.verify();
     }
@@ -634,10 +608,10 @@ class ExternalOAuthAuthenticationManagerIT {
     void pkceWithJwtClientAuthInBody_is_used() {
         config.setClientAuthInBody(true);
         mockUaaServer.expect(requestTo(config.getTokenUrl().toString()))
-            .andExpect(request -> assertThat("Check Auth header not present", request.getHeaders().get("Authorization"), nullValue()))
-            .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
-            .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+                .andExpect(request -> assertThat(request.getHeaders().get("Authorization")).as("Check Auth header not present").isNull())
+                .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
+                .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
         config.setRelyingPartySecret(null);
@@ -646,25 +620,25 @@ class ExternalOAuthAuthenticationManagerIT {
         attributes.setAttribute(SessionUtils.codeVerifierParameterAttributeKeyForIdp("uaa"), "code_verifier", RequestAttributes.SCOPE_SESSION);
         RequestContextHolder.setRequestAttributes(attributes);
 
-        Map<String, Object> idToken = externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, config);
-        assertNotNull(idToken);
+        Map<String, Object> idToken = externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, identityProvider);
+        assertThat(idToken).isNotNull();
 
         mockUaaServer.verify();
     }
 
     @Test
-    void testAdditionalParameterClientAuthInBody_is_used() {
+    void additionalParameterClientAuthInBodyIsUsed() {
         config.setClientAuthInBody(true);
         config.setAdditionalAuthzParameters(Map.of("token_format", "opaque"));
         mockUaaServer.expect(requestTo(config.getTokenUrl().toString()))
-            .andExpect(request -> assertThat("Check Auth header not present", request.getHeaders().get("Authorization"), nullValue()))
-            .andExpect(content().string(containsString("token_format=opaque")))
-            .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
-            .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+                .andExpect(request -> assertThat(request.getHeaders().get("Authorization")).as("Check Auth header not present").isNull())
+                .andExpect(content().string(containsString("token_format=opaque")))
+                .andExpect(content().string(containsString("client_id=" + config.getRelyingPartyId())))
+                .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(getIdTokenResponse()));
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
-        Map<String, Object> idToken = externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, config);
-        assertNotNull(idToken);
+        Map<String, Object> idToken = externalOAuthAuthenticationManager.getClaimsFromToken(xCodeToken, identityProvider);
+        assertThat(idToken).isNotNull();
 
         mockUaaServer.verify();
     }
@@ -684,8 +658,8 @@ class ExternalOAuthAuthenticationManagerIT {
 
         ArgumentCaptor<ApplicationEvent> userArgumentCaptor = ArgumentCaptor.forClass(ApplicationEvent.class);
         verify(publisher, times(3)).publishEvent(userArgumentCaptor.capture());
-        assertEquals(3, userArgumentCaptor.getAllValues().size());
-        NewUserAuthenticatedEvent event = (NewUserAuthenticatedEvent) userArgumentCaptor.getAllValues().get(0);
+        assertThat(userArgumentCaptor.getAllValues()).hasSize(3);
+        NewUserAuthenticatedEvent event = (NewUserAuthenticatedEvent) userArgumentCaptor.getAllValues().getFirst();
 
         assertUserCreated(event);
     }
@@ -701,8 +675,8 @@ class ExternalOAuthAuthenticationManagerIT {
 
         ArgumentCaptor<ApplicationEvent> userArgumentCaptor = ArgumentCaptor.forClass(ApplicationEvent.class);
         verify(publisher, times(3)).publishEvent(userArgumentCaptor.capture());
-        assertEquals(3, userArgumentCaptor.getAllValues().size());
-        NewUserAuthenticatedEvent event = (NewUserAuthenticatedEvent) userArgumentCaptor.getAllValues().get(0);
+        assertThat(userArgumentCaptor.getAllValues()).hasSize(3);
+        NewUserAuthenticatedEvent event = (NewUserAuthenticatedEvent) userArgumentCaptor.getAllValues().getFirst();
 
         assertUserCreated(event);
     }
@@ -721,7 +695,7 @@ class ExternalOAuthAuthenticationManagerIT {
     @Test
     void single_key_response_without_value() throws Exception {
         String json = getKeyJson(PRIVATE_KEY, "correctKey", false);
-        Map<String, Object> map = JsonUtils.readValue(json, new TypeReference<Map<String, Object>>() {
+        Map<String, Object> map = JsonUtils.readValue(json, new TypeReference<>() {
         });
         map.remove("value");
         json = JsonUtils.writeValueAsString(map);
@@ -733,10 +707,10 @@ class ExternalOAuthAuthenticationManagerIT {
     @Test
     void multi_key_response_without_value() throws Exception {
         String jsonValid = getKeyJson(PRIVATE_KEY, "correctKey", false);
-        String jsonInvalid = getKeyJson(invalidRsaSigningKey, "invalidKey", false);
-        Map<String, Object> mapValid = JsonUtils.readValue(jsonValid, new TypeReference<Map<String, Object>>() {
+        String jsonInvalid = getKeyJson(INVALID_RSA_SIGNING_KEY, "invalidKey", false);
+        Map<String, Object> mapValid = JsonUtils.readValue(jsonValid, new TypeReference<>() {
         });
-        Map<String, Object> mapInvalid = JsonUtils.readValue(jsonInvalid, new TypeReference<Map<String, Object>>() {
+        Map<String, Object> mapInvalid = JsonUtils.readValue(jsonInvalid, new TypeReference<>() {
         });
         mapValid.remove("value");
         mapInvalid.remove("value");
@@ -748,36 +722,28 @@ class ExternalOAuthAuthenticationManagerIT {
 
     @Test
     void multi_key_all_invalid() throws Exception {
-        String jsonInvalid = getKeyJson(invalidRsaSigningKey, "invalidKey", false);
-        String jsonInvalid2 = getKeyJson(invalidRsaSigningKey, "invalidKey2", false);
-        Map<String, Object> mapInvalid = JsonUtils.readValue(jsonInvalid, new TypeReference<Map<String, Object>>() {
+        String jsonInvalid = getKeyJson(INVALID_RSA_SIGNING_KEY, "invalidKey", false);
+        String jsonInvalid2 = getKeyJson(INVALID_RSA_SIGNING_KEY, "invalidKey2", false);
+        Map<String, Object> mapInvalid = JsonUtils.readValue(jsonInvalid, new TypeReference<>() {
         });
-        Map<String, Object> mapInvalid2 = JsonUtils.readValue(jsonInvalid2, new TypeReference<Map<String, Object>>() {
+        Map<String, Object> mapInvalid2 = JsonUtils.readValue(jsonInvalid2, new TypeReference<>() {
         });
         String json = JsonUtils.writeValueAsString(new JsonWebKeySet<>(Arrays.asList(new JsonWebKey(mapInvalid), new JsonWebKey(mapInvalid2))));
-        assertTrue(json.contains("\"invalidKey\""));
-        assertTrue(json.contains("\"invalidKey2\""));
+        assertThat(json).contains("\"invalidKey\"", "\"invalidKey2\"");
         configureTokenKeyResponse("http://localhost/token_key", json);
         addTheUserOnAuth();
-        try {
-            externalOAuthAuthenticationManager.authenticate(xCodeToken);
-            fail("not expected");
-        } catch (Exception e) {
-            assertTrue(e instanceof RuntimeException);
-        }
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken))
+                .isInstanceOf(RuntimeException.class);
     }
 
     @Test
     void null_key_invalid() throws Exception {
-        String json = new String("");
+        String json = "";
         configureTokenKeyResponse("http://localhost/token_key", json);
         addTheUserOnAuth();
-        try {
-            externalOAuthAuthenticationManager.authenticate(xCodeToken);
-            fail("not expected");
-        } catch (Exception e) {
-            assertTrue(e.getCause() instanceof OidcMetadataFetchingException);
-        }
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken))
+                .isInstanceOf(RuntimeException.class)
+                .hasCauseInstanceOf(OidcMetadataFetchingException.class);
     }
 
     @Test
@@ -785,12 +751,9 @@ class ExternalOAuthAuthenticationManagerIT {
         String json = new String("{x}");
         configureTokenKeyResponse("http://localhost/token_key", json);
         addTheUserOnAuth();
-        try {
-            externalOAuthAuthenticationManager.authenticate(xCodeToken);
-            fail("not expected");
-        } catch (Exception e) {
-            assertTrue(e.getCause() instanceof OidcMetadataFetchingException);
-        }
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken))
+                .isInstanceOf(RuntimeException.class)
+                .hasCauseInstanceOf(OidcMetadataFetchingException.class);
     }
 
     @Test
@@ -818,7 +781,7 @@ class ExternalOAuthAuthenticationManagerIT {
             externalOAuthAuthenticationManager.authenticate(xCodeToken);
             fail("not expected");
         } catch (Exception e) {
-            assertTrue(e instanceof IllegalArgumentException);
+            assertThat(e).isInstanceOf(IllegalArgumentException.class);
         }
     }
 
@@ -827,8 +790,7 @@ class ExternalOAuthAuthenticationManagerIT {
         config.setAddShadowUserOnLogin(false);
         mockToken();
 
-        assertThrows(AccountNotPreCreatedException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
-
+        assertThatExceptionOfType(AccountNotPreCreatedException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
@@ -837,14 +799,14 @@ class ExternalOAuthAuthenticationManagerIT {
 
         config.setTokenKey("WRONG_KEY");
 
-        assertThrows(InvalidTokenException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
     void rejectTokenWithInvalidSignatureAccordingToTokenKeyEndpoint() throws Exception {
-        configureTokenKeyResponse("http://localhost/token_key", invalidRsaSigningKey, "wrongKey");
+        configureTokenKeyResponse("http://localhost/token_key", INVALID_RSA_SIGNING_KEY, "wrongKey");
 
-        assertThrows(InvalidTokenException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
@@ -852,7 +814,7 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.put("iss", "http://wrong.issuer/");
         mockToken();
 
-        assertThrows(InvalidTokenException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
@@ -860,7 +822,7 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.put("exp", Instant.now().getEpochSecond() - 1);
         mockToken();
 
-        assertThrows(InvalidTokenException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
@@ -868,7 +830,7 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.put("aud", Arrays.asList("another_client", "a_complete_stranger"));
         mockToken();
 
-        assertThrows(InvalidTokenException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
@@ -895,17 +857,50 @@ class ExternalOAuthAuthenticationManagerIT {
 
         ArgumentCaptor<ApplicationEvent> userArgumentCaptor = ArgumentCaptor.forClass(ApplicationEvent.class);
         verify(publisher, times(2)).publishEvent(userArgumentCaptor.capture());
-        assertEquals(2, userArgumentCaptor.getAllValues().size());
-        ExternalGroupAuthorizationEvent event = (ExternalGroupAuthorizationEvent) userArgumentCaptor.getAllValues().get(0);
+        assertThat(userArgumentCaptor.getAllValues()).hasSize(2);
+        ExternalGroupAuthorizationEvent event = (ExternalGroupAuthorizationEvent) userArgumentCaptor.getAllValues().getFirst();
 
         UaaUser uaaUser = event.getUser();
-        assertEquals("Marissa", uaaUser.getGivenName());
-        assertEquals("Bloggs", uaaUser.getFamilyName());
-        assertEquals("marissa@bloggs.com", uaaUser.getEmail());
-        assertEquals("the_origin", uaaUser.getOrigin());
-        assertEquals("1234567890", uaaUser.getPhoneNumber());
-        assertEquals("12345", uaaUser.getUsername());
-        assertEquals(OriginKeys.UAA, uaaUser.getZoneId());
+        assertThat(uaaUser.getGivenName()).isEqualTo("Marissa");
+        assertThat(uaaUser.getFamilyName()).isEqualTo("Bloggs");
+        assertThat(uaaUser.getEmail()).isEqualTo("marissa@bloggs.com");
+        assertThat(uaaUser.getOrigin()).isEqualTo("the_origin");
+        assertThat(uaaUser.getPhoneNumber()).isEqualTo("1234567890");
+        assertThat(uaaUser.getUsername()).isEqualTo("12345");
+        assertThat(uaaUser.getZoneId()).isEqualTo(OriginKeys.UAA);
+    }
+
+    @Test
+    void publishExternalGroupAuthorizationEvent_skippedIf_notIsRegisteredIdpAuthentication() {
+        claims.put("user_name", "12345");
+        claims.put("origin", "the_origin");
+        claims.put("iss", UAA_ISSUER_URL);
+
+        UaaUser existingShadowUser = new UaaUser(new UaaUserPrototype()
+                .withUsername("12345")
+                .withPassword("")
+                .withEmail("marissa_old@bloggs.com")
+                .withGivenName("Marissa_Old")
+                .withFamilyName("Bloggs_Old")
+                .withId("user-id")
+                .withOrigin("the_origin")
+                .withZoneId("uaa")
+                .withAuthorities(UaaAuthority.USER_AUTHORITIES));
+
+        userDatabase.addUser(existingShadowUser);
+
+        CompositeToken token = getCompositeAccessToken();
+        String idToken = token.getIdTokenValue();
+        xCodeToken = new ExternalOAuthCodeToken(null, null, null, idToken, null, null);
+
+        externalOAuthAuthenticationManager.authenticate(xCodeToken);
+
+        ArgumentCaptor<ApplicationEvent> userArgumentCaptor = ArgumentCaptor.forClass(ApplicationEvent.class);
+        verify(publisher, times(1)).publishEvent(userArgumentCaptor.capture());
+        assertThat(userArgumentCaptor.getAllValues())
+                .hasSize(1)
+                .first()
+                .isInstanceOf(IdentityProviderAuthenticationSuccessEvent.class);
     }
 
     @Test
@@ -921,15 +916,15 @@ class ExternalOAuthAuthenticationManagerIT {
 
         ArgumentCaptor<ApplicationEvent> userArgumentCaptor = ArgumentCaptor.forClass(ApplicationEvent.class);
         verify(publisher, times(3)).publishEvent(userArgumentCaptor.capture());
-        assertEquals(3, userArgumentCaptor.getAllValues().size());
-        assertThat(userArgumentCaptor.getAllValues().get(0), instanceOf(InvitedUserAuthenticatedEvent.class));
+        assertThat(userArgumentCaptor.getAllValues()).hasSize(3);
+        assertThat(userArgumentCaptor.getAllValues().getFirst()).isInstanceOf(InvitedUserAuthenticatedEvent.class);
 
         RequestContextHolder.resetRequestAttributes();
     }
 
     @Test
     void loginAndValidateSignatureUsingTokenKeyEndpoint() throws Exception {
-        config.setTokenKeyUrl(new URL("http://localhost/token_key"));
+        config.setTokenKeyUrl(URI.create("http://localhost/token_key").toURL());
         config.setTokenKey(null);
 
         KeyInfo key = KeyInfoBuilder.build("correctKey", PRIVATE_KEY, UAA_ISSUER_URL);
@@ -939,7 +934,7 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         mockUaaServer.expect(requestTo("http://localhost/token_key"))
                 .andExpect(header("Authorization", "Basic " + new String(Base64.encodeBase64("identity:identitysecret".getBytes()))))
-                .andExpect(header("Accept", "application/json"))
+                .andExpect(header("Accept", "application/json,application/jwk-set+json"))
                 .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(response));
 
         mockToken();
@@ -956,7 +951,6 @@ class ExternalOAuthAuthenticationManagerIT {
                 .withAuthorities(UaaAuthority.USER_AUTHORITIES));
 
         userDatabase.addUser(existingShadowUser);
-
         externalOAuthAuthenticationManager.authenticate(xCodeToken);
     }
 
@@ -982,8 +976,7 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
 
         UaaUser uaaUser = externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
-
-        assertThat(uaaUser.getUsername(), is("marissa"));
+        assertThat(uaaUser.getUsername()).isEqualTo("marissa");
     }
 
     @Test
@@ -991,7 +984,7 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.remove("preferred_username");
         mockToken();
         UaaUser uaaUser = externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
-        assertThat(uaaUser.getUsername(), is("12345"));
+        assertThat(uaaUser.getUsername()).isEqualTo("12345");
     }
 
     @Test
@@ -1000,10 +993,9 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.remove("sub");
         mockToken();
 
-        assertThrowsWithMessageThat(InsufficientAuthenticationException.class,
-                () -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken),
-                is("Unable to map claim to a username")
-        );
+        assertThatThrownBy(() -> externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken))
+                .isInstanceOf(InsufficientAuthenticationException.class)
+                .hasMessage("Unable to map claim to a username");
     }
 
     @Test
@@ -1012,45 +1004,59 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         UaaUser user = externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
 
-        assertEquals("12345@user.from.the_origin.cf", user.getEmail());
+        assertThat(user.getEmail()).isEqualTo("12345@user.from.the_origin.cf");
     }
 
     @Test
-    void testGetUserSetsTheRightOrigin() {
-        externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
-        assertEquals(ORIGIN, externalOAuthAuthenticationManager.getOrigin());
+    void getUserSetsTheRightOrigin() {
+        final IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition<?>> idp = MultitenancyFixture.identityProvider("the_origin", "uaa");
+        idp.setConfig(config);
+        when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(idp);
 
-        ExternalOAuthCodeToken otherToken = new ExternalOAuthCodeToken(CODE, "other_origin", "http://localhost/callback/the_origin");
-        externalOAuthAuthenticationManager.getUser(otherToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(otherToken));
-        assertEquals("other_origin", externalOAuthAuthenticationManager.getOrigin());
-    }
+        final IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition<?>> otherIdp = MultitenancyFixture.identityProvider("other_origin", "uaa");
+        otherIdp.setConfig(config);
+        when(provisioning.retrieveByOrigin(eq("other_origin"), anyString())).thenReturn(otherIdp);
 
-    @Test
-    void testGetUserIssuerOverrideNotUsed() {
         mockToken();
-        assertNotNull(externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken)));
+        AuthenticationData authenticationData = externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken);
+        assertThat(authenticationData).isNotNull();
+        externalOAuthAuthenticationManager.getUser(xCodeToken, authenticationData);
+        assertThat(authenticationData.getOrigin()).isEqualTo(ORIGIN);
+
+        mockUaaServer.verify();
+        mockUaaServer.reset();
+
+        mockToken();
+        ExternalOAuthCodeToken otherToken = new ExternalOAuthCodeToken(CODE, "other_origin", "http://localhost/callback/the_origin");
+        AuthenticationData authenticationDataOtherToken = externalOAuthAuthenticationManager.getExternalAuthenticationDetails(otherToken);
+        externalOAuthAuthenticationManager.getUser(otherToken, authenticationDataOtherToken);
+        assertThat(authenticationDataOtherToken.getOrigin()).isEqualTo("other_origin");
     }
 
     @Test
-    void testGetUserIssuerOverrideUsedNoMatch() {
+    void getUserIssuerOverrideNotUsed() {
+        mockToken();
+        assertThat(externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken))).isNotNull();
+    }
+
+    @Test
+    void getUserIssuerOverrideUsedNoMatch() {
         config.setIssuer(ISSUER);
         mockToken();
 
-        assertThrows(InvalidTokenException.class,
-                () -> externalOAuthAuthenticationManager.getUser(
-                        xCodeToken,
-                        externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken)
-                )
-        );
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> externalOAuthAuthenticationManager.getUser(
+                xCodeToken,
+                externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken)
+        ));
     }
 
     @Test
-    void testGetUserIssuerOverrideUsedMatch() {
+    void getUserIssuerOverrideUsedMatch() {
         config.setIssuer(ISSUER);
         claims.remove("iss");
         claims.put("iss", ISSUER);
         mockToken();
-        assertNotNull(externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken)));
+        assertThat(externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken))).isNotNull();
     }
 
     @Test
@@ -1058,9 +1064,9 @@ class ExternalOAuthAuthenticationManagerIT {
         addTheUserOnAuth();
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
-        assertNotNull(authentication);
-        assertNotNull(authentication.getAuthContextClassRef());
-        assertThat(authentication.getAuthContextClassRef(), containsInAnyOrder("urn:oasis:names:tc:SAML:2.0:ac:classes:Password"));
+        assertThat(authentication).isNotNull();
+        assertThat(authentication.getAuthContextClassRef())
+                .contains("urn:oasis:names:tc:SAML:2.0:ac:classes:Password");
     }
 
     @Test
@@ -1069,44 +1075,42 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.remove(ClaimConstants.ACR);
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
-        assertNotNull(authentication);
-        assertNull(authentication.getAuthContextClassRef());
+        assertThat(authentication).isNotNull();
+        assertThat(authentication.getAuthContextClassRef()).isNull();
     }
 
     @Test
     void unableToAuthenticate_whenProviderIsNotOIDCOrOAuth() {
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(MultitenancyFixture.identityProvider("the_origin", "uaa"));
         Authentication authentication = externalOAuthAuthenticationManager.authenticate(xCodeToken);
-        assertNull(authentication);
+        assertThat(authentication).isNull();
     }
 
     @Test
     void unableToAuthenticate_whenProviderIsNotFound() {
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(null);
         Authentication authentication = externalOAuthAuthenticationManager.authenticate(xCodeToken);
-        assertNull(authentication);
+        assertThat(authentication).isNull();
     }
 
     @Test
     void tokenCannotBeFetchedFromCodeBecauseOfServerError() {
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
 
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
         mockUaaServer.expect(requestTo("http://localhost/oauth/token")).andRespond(withServerError());
-
-        assertThrows(HttpServerErrorException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(HttpServerErrorException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
     void tokenCannotBeFetchedFromInvalidCode() {
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
 
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
         mockUaaServer.expect(requestTo("http://localhost/oauth/token")).andRespond(withBadRequest());
-
-        assertThrows(HttpClientErrorException.class, () -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
+        assertThatExceptionOfType(HttpClientErrorException.class).isThrownBy(() -> externalOAuthAuthenticationManager.authenticate(xCodeToken));
     }
 
     @Test
@@ -1115,7 +1119,7 @@ class ExternalOAuthAuthenticationManagerIT {
         claims.put("amr", Arrays.asList("mfa", "rba"));
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
-        assertThat(authentication.getAuthenticationMethods(), containsInAnyOrder("mfa", "rba", "ext", "oauth"));
+        assertThat(authentication.getAuthenticationMethods()).contains("mfa", "rba", "ext", "oauth");
     }
 
     @Test
@@ -1135,11 +1139,11 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
         UaaUser actualUaaUser = externalOAuthAuthenticationManager.getUserDatabase().retrieveUserById(authentication.getPrincipal().getId());
-        assertEquals("test@email.org", actualUaaUser.getEmail());
-        assertEquals("first_name", actualUaaUser.getGivenName());
-        assertEquals("last_name", actualUaaUser.getFamilyName());
-        assertEquals("randomNumber", actualUaaUser.getPhoneNumber());
-        assertTrue("verified", actualUaaUser.isVerified());
+        assertThat(actualUaaUser.getEmail()).isEqualTo("test@email.org");
+        assertThat(actualUaaUser.getGivenName()).isEqualTo("first_name");
+        assertThat(actualUaaUser.getFamilyName()).isEqualTo("last_name");
+        assertThat(actualUaaUser.getPhoneNumber()).isEqualTo("randomNumber");
+        assertThat(actualUaaUser.isVerified()).as("verified").isTrue();
     }
 
     @Test
@@ -1151,7 +1155,7 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
         UaaUser actualUaaUser = externalOAuthAuthenticationManager.getUserDatabase().retrieveUserById(authentication.getPrincipal().getId());
-        assertFalse("verified", actualUaaUser.isVerified());
+        assertThat(actualUaaUser.isVerified()).as("verified").isFalse();
     }
 
     @Test
@@ -1164,7 +1168,7 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
         UaaUser actualUaaUser = externalOAuthAuthenticationManager.getUserDatabase().retrieveUserById(authentication.getPrincipal().getId());
-        assertTrue("verified", actualUaaUser.isVerified());
+        assertThat(actualUaaUser.isVerified()).as("verified").isTrue();
     }
 
     @Test
@@ -1175,11 +1179,11 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
         UaaUser actualUaaUser = externalOAuthAuthenticationManager.getUserDatabase().retrieveUserById(authentication.getPrincipal().getId());
-        assertTrue("verified", actualUaaUser.isVerified());
+        assertThat(actualUaaUser.isVerified()).as("verified").isTrue();
     }
 
     @Test
-    void email_verified_is_ommitted() {
+    void email_verified_is_omitted() {
         addTheUserOnAuth();
         claims.remove("email_verified");
         attributeMappings.put("email_verified", "email_verified");
@@ -1187,7 +1191,7 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
         UaaUser actualUaaUser = externalOAuthAuthenticationManager.getUserDatabase().retrieveUserById(authentication.getPrincipal().getId());
-        assertFalse("verified", actualUaaUser.isVerified());
+        assertThat(actualUaaUser.isVerified()).as("verified").isFalse();
     }
 
     @Test
@@ -1212,31 +1216,31 @@ class ExternalOAuthAuthenticationManagerIT {
 
         UaaAuthentication authentication = (UaaAuthentication) externalOAuthAuthenticationManager.authenticate(xCodeToken);
 
-        assertEquals(map, authentication.getUserAttributes());
-        assertThat(authentication.getExternalGroups(), containsInAnyOrder(scopes.toArray()));
+        assertThat(authentication.getUserAttributes()).isEqualTo(map);
+        assertThat(authentication.getExternalGroups()).containsAll(scopes);
         UserInfo info = new UserInfo()
                 .setUserAttributes(map)
                 .setRoles(scopes);
         UserInfo actualUserInfo = externalOAuthAuthenticationManager.getUserDatabase().getUserInfo(authentication.getPrincipal().getId());
-        assertEquals(actualUserInfo.getUserAttributes(), info.getUserAttributes());
-        assertThat(actualUserInfo.getRoles(), containsInAnyOrder(info.getRoles().toArray()));
+        assertThat(info.getUserAttributes()).isEqualTo(actualUserInfo.getUserAttributes());
+        assertThat(actualUserInfo.getRoles()).containsAll(info.getRoles());
 
         UaaUser actualUser = externalOAuthAuthenticationManager.getUserDatabase().retrieveUserByName("12345", "the_origin");
-        assertThat(actualUser, is(not(nullValue())));
-        assertThat(actualUser.getGivenName(), is("Marissa"));
+        assertThat(actualUser).isNotNull();
+        assertThat(actualUser.getGivenName()).isEqualTo("Marissa");
     }
 
     private void assertUserCreated(NewUserAuthenticatedEvent event) {
-        assertNotNull(event);
+        assertThat(event).isNotNull();
         UaaUser uaaUser = event.getUser();
-        assertNotNull(uaaUser);
-        assertEquals("Marissa", uaaUser.getGivenName());
-        assertEquals("Bloggs", uaaUser.getFamilyName());
-        assertEquals("marissa@bloggs.com", uaaUser.getEmail());
-        assertEquals("the_origin", uaaUser.getOrigin());
-        assertEquals("1234567890", uaaUser.getPhoneNumber());
-        assertEquals("12345", uaaUser.getUsername());
-        assertEquals(OriginKeys.UAA, uaaUser.getZoneId());
+        assertThat(uaaUser).isNotNull();
+        assertThat(uaaUser.getGivenName()).isEqualTo("Marissa");
+        assertThat(uaaUser.getFamilyName()).isEqualTo("Bloggs");
+        assertThat(uaaUser.getEmail()).isEqualTo("marissa@bloggs.com");
+        assertThat(uaaUser.getOrigin()).isEqualTo("the_origin");
+        assertThat(uaaUser.getPhoneNumber()).isEqualTo("1234567890");
+        assertThat(uaaUser.getUsername()).isEqualTo("12345");
+        assertThat(uaaUser.getZoneId()).isEqualTo(OriginKeys.UAA);
     }
 
     private void configureTokenKeyResponse(String keyUrl, String signingKey, String keyId) throws MalformedURLException {
@@ -1261,15 +1265,14 @@ class ExternalOAuthAuthenticationManagerIT {
         mockToken();
         mockUaaServer.expect(requestTo(keyUrl))
                 .andExpect(header("Authorization", "Basic " + new String(Base64.encodeBase64("identity:identitysecret".getBytes()))))
-                .andExpect(header("Accept", "application/json"))
+                .andExpect(header("Accept", "application/json,application/jwk-set+json"))
                 .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(response));
     }
 
     private void addTheUserOnAuth() {
         doAnswer(invocation -> {
             Object e = invocation.getArguments()[0];
-            if (e instanceof NewUserAuthenticatedEvent) {
-                NewUserAuthenticatedEvent event = (NewUserAuthenticatedEvent) e;
+            if (e instanceof NewUserAuthenticatedEvent event) {
                 UaaUser user = event.getUser();
                 userDatabase.addUser(user);
             }
@@ -1305,7 +1308,7 @@ class ExternalOAuthAuthenticationManagerIT {
                 .andExpect(content().string(containsString("grant_type=authorization_code")))
                 .andExpect(content().string(containsString("code=the_code")))
                 .andExpect(content().string(containsString("redirect_uri=http%3A%2F%2Flocalhost%2Fcallback%2Fthe_origin")))
-                .andExpect(content().string(containsString(("response_type=id_token"))))
+                .andExpect(content().string(containsString("response_type=id_token")))
                 .andRespond(withStatus(OK).contentType(APPLICATION_JSON).body(response));
     }
 
@@ -1317,7 +1320,7 @@ class ExternalOAuthAuthenticationManagerIT {
         removeClaims.stream().forEach(c -> claims.remove(c));
         String idTokenJwt = UaaTokenUtils.constructToken(header, claims, signer);
 
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = getProvider();
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = getProvider();
         when(provisioning.retrieveByOrigin(eq(ORIGIN), anyString())).thenReturn(identityProvider);
 
         CompositeToken compositeToken = new CompositeToken("accessToken");
@@ -1329,8 +1332,8 @@ class ExternalOAuthAuthenticationManagerIT {
         return JsonUtils.writeValueAsString(getCompositeAccessToken());
     }
 
-    private IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> getProvider() {
-        IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider = new IdentityProvider<>();
+    private IdentityProvider<OIDCIdentityProviderDefinition> getProvider() {
+        IdentityProvider<OIDCIdentityProviderDefinition> identityProvider = new IdentityProvider<>();
         identityProvider.setName("my oidc provider");
         identityProvider.setIdentityZoneId(OriginKeys.UAA);
         config.setAttributeMappings(attributeMappings);
@@ -1340,15 +1343,40 @@ class ExternalOAuthAuthenticationManagerIT {
         return identityProvider;
     }
 
+    private IdentityProvider<RawExternalOAuthIdentityProviderDefinition> getOauth20Provider()  throws Exception {
+        RawExternalOAuthIdentityProviderDefinition config = new RawExternalOAuthIdentityProviderDefinition()
+                .setAuthUrl(URI.create("http://localhost/oauth/authorize").toURL())
+                .setTokenUrl(URI.create("http://localhost/oauth/token").toURL())
+                .setIssuer("http://localhost/oauth/token")
+                .setShowLinkText(true)
+                .setLinkText("My oauth20 Provider")
+                .setRelyingPartyId("identity")
+                .setRelyingPartySecret("identitysecret")
+                .setUserInfoUrl(URI.create("http://localhost/userinfo").toURL())
+                .setTokenKey(PUBLIC_KEY);
+        config.setExternalGroupsWhitelist(Collections.singletonList("*"));
+        attributeMappings.put(USER_NAME_ATTRIBUTE_NAME, "login");
+        config.setAttributeMappings(attributeMappings);
+        config.setResponseType("code");
+
+        IdentityProvider<RawExternalOAuthIdentityProviderDefinition> identityProvider = new IdentityProvider<>();
+        identityProvider.setName("my oauth20 provider");
+        identityProvider.setIdentityZoneId(OriginKeys.UAA);
+        identityProvider.setType(OAUTH20);
+        identityProvider.setConfig(config);
+        identityProvider.setOriginKey(ORIGIN);
+        return identityProvider;
+    }
+
     private void testTokenHasAuthoritiesFromIdTokenRoles() {
         attributeMappings.put(GROUP_ATTRIBUTE_NAME, "scope");
         mockToken();
 
         UaaUser uaaUser = externalOAuthAuthenticationManager.getUser(xCodeToken, externalOAuthAuthenticationManager.getExternalAuthenticationDetails(xCodeToken));
 
-        List<String> authorities = uaaUser.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+        List<String> authorities = uaaUser.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
         for (String scope : SCOPES_LIST) {
-            assertThat(authorities, hasItem(scope));
+            assertThat(authorities).contains(scope);
         }
     }
 
