@@ -15,34 +15,33 @@
 
 package org.cloudfoundry.identity.uaa.provider.oauth;
 
+import org.cloudfoundry.identity.uaa.constants.ClientAuthentication;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
+import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.GROUP_ATTRIBUTE_NAME;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.STORE_CUSTOM_ATTRIBUTES_NAME;
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.entry;
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.map;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
 
-public class OauthIdentityProviderDefinitionFactoryBeanTest {
+class OauthIdentityProviderDefinitionFactoryBeanTest {
 
     private OauthIDPWrapperFactoryBean factoryBean;
     private HashMap<String, Object> idpDefinitionMap;
     private OIDCIdentityProviderDefinition providerDefinition;
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         factoryBean = new OauthIDPWrapperFactoryBean(null);
         providerDefinition = new OIDCIdentityProviderDefinition();
         idpDefinitionMap = new HashMap<>();
@@ -54,107 +53,108 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         idpDefinitionMap.put("tokenKeyUrl", "http://token-key.url");
         idpDefinitionMap.put("logoutUrl", "http://logout.url");
         idpDefinitionMap.put("clientAuthInBody", false);
+        idpDefinitionMap.put("cacheJwks", true);
     }
 
     @Test
-    public void as_configured() {
+    void as_configured() {
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertFalse(providerDefinition.isClientAuthInBody());
+        assertThat(providerDefinition.isClientAuthInBody()).isFalse();
     }
 
     @Test
-    public void client_auth_in_body() {
+    void client_auth_in_body() {
         idpDefinitionMap.put("clientAuthInBody", true);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(providerDefinition.isClientAuthInBody());
+        assertThat(providerDefinition.isClientAuthInBody()).isTrue();
     }
 
     @Test
-    public void store_custom_attributes_default() {
+    void store_custom_attributes_default() {
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(providerDefinition.isStoreCustomAttributes());
+        assertThat(providerDefinition.isStoreCustomAttributes()).isTrue();
     }
 
     @Test
-    public void store_custom_attributes_set_to_true() {
+    void store_custom_attributes_set_to_true() {
         idpDefinitionMap.put(STORE_CUSTOM_ATTRIBUTES_NAME, true);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(providerDefinition.isStoreCustomAttributes());
+        assertThat(providerDefinition.isStoreCustomAttributes()).isTrue();
     }
 
     @Test
-    public void store_custom_attributes_set_to_false() {
+    void store_custom_attributes_set_to_false() {
         idpDefinitionMap.put(STORE_CUSTOM_ATTRIBUTES_NAME, false);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertFalse(providerDefinition.isStoreCustomAttributes());
+        assertThat(providerDefinition.isStoreCustomAttributes()).isFalse();
     }
 
     @Test
-    public void logout_url_in_body() {
+    void logout_url_in_body() {
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertEquals("http://logout.url", providerDefinition.getLogoutUrl().toString());
+        assertThat(providerDefinition.getLogoutUrl()).hasToString("http://logout.url");
     }
 
     @Test
-    public void external_group_mapping_in_body() {
+    void external_group_mapping_in_body() {
         Map<String, Object> externalGroupMapping = map(
-            entry(GROUP_ATTRIBUTE_NAME, "roles")
+                entry(GROUP_ATTRIBUTE_NAME, "roles")
         );
         idpDefinitionMap.put("groupMappingMode", "AS_SCOPES");
         idpDefinitionMap.put("attributeMappings", externalGroupMapping);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertEquals(externalGroupMapping, providerDefinition.getAttributeMappings());
-        assertEquals("AS_SCOPES", providerDefinition.getGroupMappingMode().toString());
+        assertThat(providerDefinition.getAttributeMappings()).isEqualTo(externalGroupMapping);
+        assertThat(providerDefinition.getGroupMappingMode()).hasToString("AS_SCOPES");
     }
 
     @Test
-    public void external_group_mapping_default_in_body() {
+    void external_group_mapping_default_in_body() {
         Map<String, Object> externalGroupMapping = map(
-            entry(GROUP_ATTRIBUTE_NAME, "roles")
+                entry(GROUP_ATTRIBUTE_NAME, "roles")
         );
         idpDefinitionMap.put("attributeMappings", externalGroupMapping);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertEquals(externalGroupMapping, providerDefinition.getAttributeMappings());
-        assertEquals(null, providerDefinition.getGroupMappingMode());
+        assertThat(providerDefinition.getAttributeMappings()).isEqualTo(externalGroupMapping);
+        assertThat(providerDefinition.getGroupMappingMode()).isNull();
     }
 
     @Test
-    public void jwtClientAuthenticationTrue() {
+    void jwtClientAuthenticationTrue() {
         Map<String, Map> definitions = new HashMap<>();
-        idpDefinitionMap.put("jwtclientAuthentication", Boolean.valueOf (true));
+        idpDefinitionMap.put("jwtclientAuthentication", Boolean.TRUE);
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertNotNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).isNotNull();
     }
 
     @Test
-    public void jwtClientAuthenticationNull() {
+    void jwtClientAuthenticationNull() {
         Map<String, Map> definitions = new HashMap<>();
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).isNull();
     }
 
     @Test
-    public void jwtClientAuthenticationInvalidType() {
+    void jwtClientAuthenticationInvalidType() {
         Map<String, Map> definitions = new HashMap<>();
-        idpDefinitionMap.put("jwtclientAuthentication", Integer.valueOf(1));
+        idpDefinitionMap.put("jwtclientAuthentication", 1);
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).isNull();
     }
 
     @Test
-    public void jwtClientAuthenticationWithCustomSetting() {
+    void jwtClientAuthenticationWithCustomSetting() {
         Map<String, Map> definitions = new HashMap<>();
         Map<String, String> settings = new HashMap<>();
         settings.put("iss", "issuer");
@@ -163,13 +163,14 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertNotNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
-        assertEquals("issuer", (((Map<String, String>)((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication()).get("iss")));
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).isNotNull();
+        assertThat((Map<String, String>) ((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication())
+                .containsEntry("iss", "issuer");
     }
 
     @Test
-    public void jwtClientAuthenticationWith2EntriesButNewOneMustWin() {
+    void jwtClientAuthenticationWith2EntriesButNewOneMustWin() {
         // given: 2 similar entry because of issue #2752
         idpDefinitionMap.put("jwtclientAuthentication", Map.of("iss", "issuer"));
         idpDefinitionMap.put("jwtClientAuthentication", Map.of("iss", "trueIssuer"));
@@ -180,46 +181,47 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
         // then
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertNotNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
-        assertNotEquals("issuer", (((Map<String, String>)((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication()).get("iss")));
-        assertEquals("trueIssuer", (((Map<String, String>)((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication()).get("iss")));
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).isNotNull();
+        assertThat((((Map<String, String>) ((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).get("iss")))
+                .isNotEqualTo("issuer")
+                .isEqualTo("trueIssuer");
     }
 
     @Test
-    public void testNoDiscoveryUrl() {
+    void noDiscoveryUrl() {
         Map<String, Map> definitions = new HashMap<>();
         idpDefinitionMap.remove("discoveryUrl");
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getDiscoveryUrl());
-        assertEquals("http://auth.url", ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getAuthUrl().toString());
-        assertEquals("http://token-key.url", ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getTokenKeyUrl().toString());
-        assertEquals("http://token.url", ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getTokenUrl().toString());
-        assertEquals("http://logout.url", ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getLogoutUrl().toString());
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getDiscoveryUrl()).isNull();
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getAuthUrl()).hasToString("http://auth.url");
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getTokenKeyUrl()).hasToString("http://token-key.url");
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getTokenUrl()).hasToString("http://token.url");
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getLogoutUrl()).hasToString("http://logout.url");
     }
 
     @Test
-    public void testDiscoveryUrl() {
+    void discoveryUrl() {
         Map<String, Map> definitions = new HashMap<>();
         idpDefinitionMap.put("discoveryUrl", "http://localhost:8080/uaa/.well-known/openid-configuration");
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        assertEquals("http://localhost:8080/uaa/.well-known/openid-configuration", ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getDiscoveryUrl().toString());
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getAuthUrl());
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getTokenKeyUrl());
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getTokenUrl());
-        assertNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getLogoutUrl());
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getDiscoveryUrl()).hasToString("http://localhost:8080/uaa/.well-known/openid-configuration");
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getAuthUrl()).isNull();
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getTokenKeyUrl()).isNull();
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getTokenUrl()).isNull();
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getLogoutUrl()).isNull();
     }
 
     @Test
-    public void testAdditionalParametersInConfig() {
+    void additionalParametersInConfig() {
         Map<String, Object> additionalMap = new HashMap<>();
         Map<String, Map> definitions = new HashMap<>();
         additionalMap.put("token_format", "jwt");
@@ -234,37 +236,97 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        Map<String, String> receivedParameters = ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getAdditionalAuthzParameters();
-        assertEquals(3, receivedParameters.size());
-        assertEquals("jwt", receivedParameters.get("token_format"));
-        assertEquals("0", receivedParameters.get("expires"));
-        assertEquals("", receivedParameters.get("empty"));
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        Map<String, String> receivedParameters = ((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getAdditionalAuthzParameters();
+        assertThat(receivedParameters).hasSize(3)
+                .containsEntry("token_format", "jwt")
+                .containsEntry("expires", "0");
+        assertThat(receivedParameters.get("empty")).isEmpty();
     }
 
     @Test
-    public void testNoAdditionalParametersInConfig() {
+    void noAdditionalParametersInConfig() {
         Map<String, Map> definitions = new HashMap<>();
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
-        Map<String, String> receivedParameters = ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getAdditionalAuthzParameters();
-        assertEquals(0, receivedParameters.size());
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        Map<String, String> receivedParameters = ((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getAdditionalAuthzParameters();
+        assertThat(receivedParameters).isEmpty();
     }
 
     @Test
-    public void testPerformRpInitiatedLogoutTrue() {
+    void performRpInitiatedLogoutTrue() {
         idpDefinitionMap.put("performRpInitiatedLogout", true);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertTrue(providerDefinition.isPerformRpInitiatedLogout());
+        assertThat(providerDefinition.isPerformRpInitiatedLogout()).isTrue();
     }
 
     @Test
-    public void testPerformRpInitiatedLogoutFalse() {
+    void performRpInitiatedLogoutFalse() {
         idpDefinitionMap.put("performRpInitiatedLogout", false);
         factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
-        assertFalse(providerDefinition.isPerformRpInitiatedLogout());
+        assertThat(providerDefinition.isPerformRpInitiatedLogout()).isFalse();
+    }
+
+    @Test
+    void authMethodNotSet() {
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        assertThat(providerDefinition.getAuthMethod()).isNull();
+        assertThat(ClientAuthentication.getCalculatedMethod(providerDefinition.getAuthMethod(), providerDefinition.getRelyingPartySecret() != null, providerDefinition.getJwtClientAuthentication() != null)).isEqualTo(ClientAuthentication.CLIENT_SECRET_BASIC);
+    }
+
+    @Test
+    void authMethodSetInvalidValue() {
+        idpDefinitionMap.put("authMethod", "empty");
+        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition));
+    }
+
+    @Test
+    void authMethodSet() {
+        // given: jwtclientAuthentication, but overrule it with authMethod=none
+        idpDefinitionMap.put("jwtclientAuthentication", true);
+        idpDefinitionMap.put("authMethod", "none");
+        idpDefinitionMap.put("type", OriginKeys.OIDC10);
+        Map<String, Map> definitions = new HashMap<>();
+        definitions.put("new.idp", idpDefinitionMap);
+        // when: load beans from uaa.yml
+        factoryBean = new OauthIDPWrapperFactoryBean(definitions);
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        // then
+        assertThat(factoryBean.getProviders().getFirst().getProvider().getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        assertThat(((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getJwtClientAuthentication()).isNotNull();
+        assertThat((((OIDCIdentityProviderDefinition) factoryBean.getProviders().getFirst().getProvider().getConfig()).getAuthMethod())).isEqualTo("none");
+    }
+
+    /* The following two test cases check whether different values for 'setForwardHeader' and 'passwordGrantEnabled' are
+     * allowed. Due to a copy/paste issue, the value of 'setForwardHeader' was previously always set to the same value
+     * as 'passwordGrantEnabled'. */
+    @Test
+    void setForwardHeaderShouldAllowValuesDifferentFromPasswordGrantEnabledTrue() {
+        testSetForwardHeader_ShouldAllowValuesDifferentFromPasswordGrantEnabled(true);
+    }
+
+    @Test
+    void setForwardHeaderShouldAllowValuesDifferentFromPasswordGrantEnabledFalse() {
+        testSetForwardHeader_ShouldAllowValuesDifferentFromPasswordGrantEnabled(false);
+    }
+
+    private void testSetForwardHeader_ShouldAllowValuesDifferentFromPasswordGrantEnabled(
+            final boolean setForwardHeader
+    ) {
+        idpDefinitionMap.put("setForwardHeader", setForwardHeader);
+        idpDefinitionMap.put("passwordGrantEnabled", !setForwardHeader);
+        idpDefinitionMap.put("type", OriginKeys.OIDC10);
+
+        factoryBean = new OauthIDPWrapperFactoryBean(Collections.singletonMap("new.idp", idpDefinitionMap));
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+
+        final IdentityProvider provider = factoryBean.getProviders().getFirst().getProvider();
+        assertThat(provider.getConfig()).isInstanceOf(OIDCIdentityProviderDefinition.class);
+        final OIDCIdentityProviderDefinition providerConfig = (OIDCIdentityProviderDefinition) provider.getConfig();
+        assertThat(providerConfig.isSetForwardHeader()).isEqualTo(setForwardHeader);
+        assertThat(providerConfig.isPasswordGrantEnabled()).isNotEqualTo(setForwardHeader);
     }
 }
