@@ -1,11 +1,14 @@
 package org.cloudfoundry.identity.uaa.zone;
 
+import org.cloudfoundry.identity.uaa.audit.event.EntityDeletedEvent;
 import org.cloudfoundry.identity.uaa.error.UaaException;
 import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
-import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
+import org.cloudfoundry.identity.uaa.provider.JdbcIdentityProviderProvisioning;
 import org.cloudfoundry.identity.uaa.saml.SamlKey;
 import org.cloudfoundry.identity.uaa.scim.ScimGroup;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupProvisioning;
+import org.cloudfoundry.identity.uaa.util.AlphanumericRandomValueStringGenerator;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -13,18 +16,16 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static org.cloudfoundry.identity.uaa.util.AssertThrowsWithMessage.assertThrowsWithMessageThat;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.is;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.same;
@@ -49,13 +50,18 @@ class IdentityZoneEndpointsTests {
     private IdentityZoneValidator mockIdentityZoneValidator;
 
     @Mock
-    private IdentityProviderProvisioning mockIdentityProviderProvisioning;
+    private JdbcIdentityProviderProvisioning mockIdentityProviderProvisioning;
 
     @Mock
-    private IdentityZoneEndpointClientRegistrationService mockIdentityZoneEndpointClientRegistrationService;
+    private ApplicationEventPublisher mockApplicationEventPublisher;
 
     @InjectMocks
     private IdentityZoneEndpoints endpoints;
+
+    @BeforeEach
+    void setUp() {
+        endpoints.setApplicationEventPublisher(mockApplicationEventPublisher);
+    }
 
     @Test
     void create_zone() throws InvalidIdentityZoneDetailsException {
@@ -74,14 +80,10 @@ class IdentityZoneEndpointsTests {
         ArgumentCaptor<ScimGroup> captor = ArgumentCaptor.forClass(ScimGroup.class);
         List<String> defaultGroups = identityZone.getConfig().getUserConfig().getDefaultGroups();
         verify(mockScimGroupProvisioning, times(defaultGroups.size())).createOrGet(captor.capture(), eq(identityZone.getId()));
-        assertEquals(defaultGroups.size(), captor.getAllValues().size());
-        assertThat(defaultGroups,
-                containsInAnyOrder(
-                        captor.getAllValues().stream().map(
-                                ScimGroup::getDisplayName
-                        ).toArray(String[]::new)
-                )
-        );
+        assertThat(captor.getAllValues()).hasSameSizeAs(defaultGroups);
+        assertThat(defaultGroups).containsExactlyInAnyOrder(captor.getAllValues().stream().map(
+                ScimGroup::getDisplayName
+        ).toArray(String[]::new));
     }
 
     @Test
@@ -113,11 +115,11 @@ class IdentityZoneEndpointsTests {
 
         endpoints.removeKeys(identityZone);
 
-        assertNull(identityZone.getConfig().getSamlConfig().getPrivateKey());
-        assertNull(identityZone.getConfig().getSamlConfig().getPrivateKeyPassword());
+        assertThat(identityZone.getConfig().getSamlConfig().getPrivateKey()).isNull();
+        assertThat(identityZone.getConfig().getSamlConfig().getPrivateKeyPassword()).isNull();
         identityZone.getConfig().getSamlConfig().getKeys().forEach((key, value) -> {
-            assertNull(value.getKey());
-            assertNull(value.getPassphrase());
+            assertThat(value.getKey()).isNull();
+            assertThat(value.getPassphrase()).isNull();
         });
     }
 
@@ -128,11 +130,11 @@ class IdentityZoneEndpointsTests {
         endpoints.restoreSecretProperties(original, identityZone);
 
 
-        assertNotNull(identityZone.getConfig().getSamlConfig().getPrivateKey());
-        assertNotNull(identityZone.getConfig().getSamlConfig().getPrivateKeyPassword());
+        assertThat(identityZone.getConfig().getSamlConfig().getPrivateKey()).isNotNull();
+        assertThat(identityZone.getConfig().getSamlConfig().getPrivateKeyPassword()).isNotNull();
         identityZone.getConfig().getSamlConfig().getKeys().forEach((key, value) -> {
-            assertNotNull(value.getKey());
-            assertNotNull(value.getPassphrase());
+            assertThat(value.getKey()).isNotNull();
+            assertThat(value.getPassphrase()).isNotNull();
         });
 
     }
@@ -146,8 +148,9 @@ class IdentityZoneEndpointsTests {
         identityZone.getConfig().getUserConfig().setAllowedGroups(List.of("sps.write", "sps.read", "idps.write", "idps.read"));
         when(mockIdentityZoneProvisioning.retrieveIgnoreActiveFlag(identityZone.getId())).thenReturn(identityZone);
         when(mockIdentityZoneProvisioning.update(same(identityZone))).thenReturn(identityZone);
-        List<ScimGroup> existingScimGroups = List.of("sps.write", "sps.read").stream().
-            map(e -> new ScimGroup(e, e, identityZone.getId())).collect(Collectors.toList());
+        List<ScimGroup> existingScimGroups = Stream.of("sps.write", "sps.read")
+                .map(e -> new ScimGroup(e, e, identityZone.getId()))
+                .toList();
         when(mockScimGroupProvisioning.retrieveAll(identityZone.getId())).thenReturn(existingScimGroups);
         spy.updateIdentityZone(identityZone, identityZone.getId());
         verify(spy, times(1)).createUserGroups(same(identityZone));
@@ -159,30 +162,72 @@ class IdentityZoneEndpointsTests {
 
         identityZone = createZone();
         identityZone.getConfig().getUserConfig().setAllowedGroups(List.of("clients.admin", "clients.write", "clients.read", "clients.secret"));
-        when(mockIdentityZoneProvisioning.retrieveIgnoreActiveFlag(identityZone.getId())).thenReturn(identityZone);
-        List<ScimGroup> existingScimGroups = List.of("sps.write", "sps.read", "idps.write", "idps.read",
-            "clients.admin", "clients.write", "clients.read", "clients.secret", "scim.write", "scim.read", "scim.create", "scim.userids",
-            "scim.zones", "groups.update", "password.write", "oauth.login", "uaa.admin").stream().
-            map(e -> new ScimGroup(e, e, identityZone.getId())).collect(Collectors.toList());
-        when(mockScimGroupProvisioning.retrieveAll(identityZone.getId())).thenReturn(existingScimGroups);
-        assertThrowsWithMessageThat(UaaException.class, () -> endpoints.updateIdentityZone(identityZone, identityZone.getId()),
-            is("The identity zone user configuration contains not-allowed groups."));
+        String id = identityZone.getId();
+        when(mockIdentityZoneProvisioning.retrieveIgnoreActiveFlag(id)).thenReturn(identityZone);
+        List<ScimGroup> existingScimGroups = Stream.of("sps.write", "sps.read", "idps.write", "idps.read",
+                        "clients.admin", "clients.write", "clients.read", "clients.secret", "scim.write", "scim.read", "scim.create", "scim.userids",
+                        "scim.zones", "groups.update", "password.write", "oauth.login", "uaa.admin")
+                .map(e -> new ScimGroup(e, e, id))
+                .toList();
+        when(mockScimGroupProvisioning.retrieveAll(id)).thenReturn(existingScimGroups);
+        assertThatThrownBy(() -> endpoints.updateIdentityZone(identityZone, id))
+                .isInstanceOf(UaaException.class)
+                .hasMessage("The identity zone user configuration contains not-allowed groups.");
+    }
+
+    @Test
+    void deleteIdentityZone_ShouldReject_IfIdpWithAliasExists() {
+        final IdentityZone idz = new IdentityZone();
+        final String idzId = new AlphanumericRandomValueStringGenerator(5).generate();
+        idz.setName(idzId);
+        idz.setId(idzId);
+        idz.setSubdomain(idzId);
+        when(mockIdentityZoneProvisioning.retrieveIgnoreActiveFlag(idzId)).thenReturn(idz);
+
+        // arrange IdP with alias exists in zone
+        when(mockIdentityProviderProvisioning.idpWithAliasExistsInZone(idzId)).thenReturn(true);
+
+        final ResponseEntity<IdentityZone> response = endpoints.deleteIdentityZone(idzId);
+        assertThat(response).isNotNull();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY);
+    }
+
+    @Test
+    void deleteIdentityZone_ShouldEmitEntityDeletedEvent_WhenNoAliasIdpExists() {
+        final IdentityZone idz = new IdentityZone();
+        final String idzId = new AlphanumericRandomValueStringGenerator(5).generate();
+        idz.setName(idzId);
+        idz.setId(idzId);
+        idz.setSubdomain(idzId);
+        when(mockIdentityZoneProvisioning.retrieveIgnoreActiveFlag(idzId)).thenReturn(idz);
+
+        // arrange no IdP with alias exists in zone
+        when(mockIdentityProviderProvisioning.idpWithAliasExistsInZone(idzId)).thenReturn(false);
+
+        final ResponseEntity<IdentityZone> response = endpoints.deleteIdentityZone(idzId);
+        assertThat(response).isNotNull();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+        final ArgumentCaptor<EntityDeletedEvent<IdentityZone>> eventArgument = ArgumentCaptor.forClass(EntityDeletedEvent.class);
+        verify(mockApplicationEventPublisher).publishEvent(eventArgument.capture());
+        final var capturedEvent = eventArgument.getValue();
+        assertThat(capturedEvent.getDeleted()).isEqualTo(idz);
     }
 
     private static IdentityZone createZone() {
         IdentityZone zone = MultitenancyFixture.identityZone("id", "subdomain");
         IdentityZoneConfiguration config = zone.getConfig();
-        assertNotNull(config);
+        assertThat(config).isNotNull();
         zone.getConfig().getSamlConfig().setPrivateKey("private");
         zone.getConfig().getSamlConfig().setPrivateKeyPassword("passphrase");
         zone.getConfig().getSamlConfig().setCertificate("certificate");
         zone.getConfig().getSamlConfig().addAndActivateKey("active", new SamlKey("private1", "passphrase1", "certificate1"));
 
-        assertNotNull(zone.getConfig().getSamlConfig().getPrivateKey());
-        assertNotNull(zone.getConfig().getSamlConfig().getPrivateKeyPassword());
+        assertThat(zone.getConfig().getSamlConfig().getPrivateKey()).isNotNull();
+        assertThat(zone.getConfig().getSamlConfig().getPrivateKeyPassword()).isNotNull();
         zone.getConfig().getSamlConfig().getKeys().forEach((key, value) -> {
-            assertNotNull(value.getKey());
-            assertNotNull(value.getPassphrase());
+            assertThat(value.getKey()).isNotNull();
+            assertThat(value.getPassphrase()).isNotNull();
         });
         return zone;
     }
